--- a/informarch/aeroqsp_instr_0025.html
+++ b/informarch/aeroqsp_instr_0025.html
@@ -62,7 +62,7 @@ AeroQSP — плеер, работающий на устаревшей и отж
 </li>
 <li>Распакуйте их содержимое в одну папку</li>
 <li><p>
-Откройте файл "run_flash.bat" с помощью любого текстового редактора, найдите строку, содержащую `SET AEROQSP=` и после знака равенства замените путь к файлу "AeroQSP.exe" просто на "AeroQSP.exe", так как сейчас файл плеера лежит в той же папке, что и "run_flash.bat". То есть теперь строка должна выглядеть так:</p>
+Откройте файл "run_flash.bat" с помощью любого текстового редактора, найдите строку, содержащую <span class="em_BLCK">SET AEROQSP=</span> и после знака равенства замените путь к файлу "AeroQSP.exe" просто на "AeroQSP.exe", так как сейчас файл плеера лежит в той же папке, что и "run_flash.bat". То есть теперь строка должна выглядеть так:</p>
 <div class="Monokai-Code">
 SET&nbsp;AEROQSP=AeroQSP.exe
 </div>
