--- a/informarch/dejstvie_po_usloviju_0019.html
+++ b/informarch/dejstvie_po_usloviju_0019.html
@@ -32,7 +32,7 @@
 Также внутрь блока IF удобно внести часть описания, относящуюся к показываемому действию.
 </p>
 <p>
-`Пример:`
+<span class="em_BLCK">Пример:</span>
 </p>
 <div class="Monokai-Code">
 <span class="Monokai-String">'Вы&nbsp;находитесь&nbsp;в&nbsp;пустой&nbsp;комнате.'</span><br/>
@@ -46,7 +46,7 @@
 <span class="Monokai-Koperator">END</span><br/>
 </div>
 <p>
-`Второй пример`. Допустим, в игре можно что-то покупать за деньги. Количество денег хранится в переменной "деньги". Когда денег становится мало, нам нужно, чтобы игроку были недоступны некоторые покупки. Если не выполнять проверку, то количество денег игрока уйдет в минус, и покупать можно будет бесконечно. Проверку можно реализовать двумя способами, на усмотрение автора.
+<span class="em_BLCK">Второй пример</span>. Допустим, в игре можно что-то покупать за деньги. Количество денег хранится в переменной "деньги". Когда денег становится мало, нам нужно, чтобы игроку были недоступны некоторые покупки. Если не выполнять проверку, то количество денег игрока уйдет в минус, и покупать можно будет бесконечно. Проверку можно реализовать двумя способами, на усмотрение автора.
 </p>
 <p>
 Первый - действие по условию, как в предыдущем примере. Если условие не выполняется, то действие не показывается вообще. Игрок видит в списке действий только те вещи, на которые у него хватает денег.
@@ -113,7 +113,7 @@
 <span class="Monokai-Koperator">END</span><br/>
 </div>
 <p>
-`Третий пример.`
+<span class="em_BLCK">Третий пример.</span>
 </p>
 <p>
 Допустим, в игре для продвижения по сюжету нам нужно что-то узнать. Кто-то рассказывает нам, что в библиотеке замка есть потайной ход. Когда мы это узнали, то при посещении библиотеки у нас появится соответствующее действие. Пока игрок не выяснил про потайной ход, действие скрыто.
@@ -132,7 +132,7 @@
 <span class="Monokai-Koperator">END</span><br/>
 </div>
 <p>
-Автор: `Nex`
+Автор: <strong>Nex</strong>
 </p>
 <p>
 26.Июл.11 06:51:46
