--- a/informarch/faq_po_qsp_0001.html
+++ b/informarch/faq_po_qsp_0001.html
@@ -46,22 +46,22 @@ qsp.dll, txt2gam, AeroQSP, справка - <a href="https://github.com/QSPFound
 Полезно будет знать для всех. Байт отвечает на вопросы по лицензиям на плеер и игры QSP.
 </p>
 <p>
-`Вопрос 1:` Лицензия на платформу QSP (в частности плеер). Какие права есть у автора игры в части распространения (в том числе и коммерческое) плеера совместно со своей игрой? И все ли авторы версий для разных ОС (windows, linux, mac os и т.п.) едины в этом вопросе?
+<span class="em_BLCK">Вопрос 1:</span> Лицензия на платформу QSP (в частности плеер). Какие права есть у автора игры в части распространения (в том числе и коммерческое) плеера совместно со своей игрой? И все ли авторы версий для разных ОС (windows, linux, mac os и т.п.) едины в этом вопросе?
 </p>
 <p>
-`Ответ:` Классический плеер - под GPL, либа под LGPL. Другие плееры могут быть под своими лицензиями. Если меняем исходники либы или классического плеера, то нужно выкладывать модифицированные исходники. Распространять существующий плеер можно как угодно, в т.ч. коммерчески.
+<span class="em_BLCK">Ответ:</span> Классический плеер - под GPL, либа под LGPL. Другие плееры могут быть под своими лицензиями. Если меняем исходники либы или классического плеера, то нужно выкладывать модифицированные исходники. Распространять существующий плеер можно как угодно, в т.ч. коммерчески.
 </p>
 <p>
-`Вопрос 2:` Лицензия на игру под QSP. Какие права есть у авторов самой игры в части распространения (в том числе и коммерческое)?
+<span class="em_BLCK">Вопрос 2:</span> Лицензия на игру под QSP. Какие права есть у авторов самой игры в части распространения (в том числе и коммерческое)?
 </p>
 <p>
-`Ответ:` Лицензию на игру указывает сам автор игры. Плеер и игры - разный контент. Соответственно, автор может как угодно распространять игру.
+<span class="em_BLCK">Ответ:</span> Лицензию на игру указывает сам автор игры. Плеер и игры - разный контент. Соответственно, автор может как угодно распространять игру.
 </p>
 <p>
-`Вопрос 3:` Какие права есть у авторов платформы QSP в части игр? Оставляют ли они за собой право без согласования с автором распространять игру (в том числе и на возмездной основе) либо получать доход от безвозмездного предоставления доступа к игре, например, от рекламы и т.п.? И все ли авторы версий для разных ОС (windows, linux, mac os и т.п.) едины в этом вопросе?
+<span class="em_BLCK">Вопрос 3:</span> Какие права есть у авторов платформы QSP в части игр? Оставляют ли они за собой право без согласования с автором распространять игру (в том числе и на возмездной основе) либо получать доход от безвозмездного предоставления доступа к игре, например, от рекламы и т.п.? И все ли авторы версий для разных ОС (windows, linux, mac os и т.п.) едины в этом вопросе?
 </p>
 <p>
-`Ответ:` См. п.2. Если автор игры специально не оговаривает условия распространения игры, считается, что игру может распространять кто угодно и как угодно.
+<span class="em_BLCK">Ответ:</span> См. п.2. Если автор игры специально не оговаривает условия распространения игры, считается, что игру может распространять кто угодно и как угодно.
 </p>
 <p>
 В особенных случаях (необходимость доработки плеера/либы, создание нового плеера, выпуск под спец. лицензией, участие в коммерческом проекте и т.п.) требуется отдельное обсуждение.
@@ -70,7 +70,7 @@ qsp.dll, txt2gam, AeroQSP, справка - <a href="https://github.com/QSPFound
 Это т.н. "настройки проекта". Там сейчас хранятся "папки локаций". Этот файл нужен только при использовании QGen, и используется только на этапе разработки игры. Со временем, туда могут быть добавлены настройки QGen, специфичные для конкретного проекта.
 </p>
 <p>
-Файл `.qproj` создается автоматически. Если случайно стереть его, ничего страшного не произойдет - просто придется заново рассовать локации по папкам. Сами локации никуда не денутся.
+Файл <span class="em_BLCK">.qproj</span> создается автоматически. Если случайно стереть его, ничего страшного не произойдет - просто придется заново рассовать локации по папкам. Сами локации никуда не денутся.
 </p>
 <p>
 Для того, чтобы запустить игру, он не нужен.
@@ -82,7 +82,7 @@ qsp.dll, txt2gam, AeroQSP, справка - <a href="https://github.com/QSPFound
 Также см. <a href="https://aleksversus.github.io/howdo_faq/informarch/None.html#informarch_calend_jul" style="text-decoration:none;" class="emFOLD">Календарь по методу счёта Юлианских дней</a>
 </p>
 <h5 id="kak-sdelat_-kalendar_">Как сделать календарь?</h5><p>
-Самый быстрый способ сделать очень точный календарь без использования циклов и громоздкого кода, это воспользоваться уже готовым решением от `evp`: <a href="https://aleksversus.github.io/howdo_faq/informarch/None.html#informarch_calend_jul" style="text-decoration:none;" class="emFOLD">Календарь по методу счёта Юлианских дней</a>.
+Самый быстрый способ сделать очень точный календарь без использования циклов и громоздкого кода, это воспользоваться уже готовым решением от <strong>evp</strong>: <a href="https://aleksversus.github.io/howdo_faq/informarch/None.html#informarch_calend_jul" style="text-decoration:none;" class="emFOLD">Календарь по методу счёта Юлианских дней</a>.
 </p>
 <p>
 <a href="https://qsp.org/index.php?option=com_agora&task=topic&id=956&Itemid=57" style="text-decoration:none;" class="emFOLD">Тема на форуме QSP</a>.
@@ -120,7 +120,7 @@ qsp.dll, txt2gam, AeroQSP, справка - <a href="https://github.com/QSPFound
 <a href="https://qsp.org/attachments/dialog.zip" style="text-decoration:none;" class="emFOLD">Пример реализации трёх видов диалога</a>
 </p>
 <h5 id="kak-ispol_zovat_-html">Как использовать HTML?</h5><p>
-Для того, чтобы использовать HTML-разметку в своей игре, необходимо включить режим распознавания HTML. Для этого переменной `usehtml` нужно присвоить значение отличное от нуля:
+Для того, чтобы использовать HTML-разметку в своей игре, необходимо включить режим распознавания HTML. Для этого переменной <span class="em_BLCK">usehtml</span> нужно присвоить значение отличное от нуля:
 </p>
 <div class="Monokai-Code">
 <span class="Monokai-SysVar">usehtml</span><span class="Monokai-Operator">=</span><span class="Monokai-Numeric">1</span><br/>
@@ -144,19 +144,19 @@ qsp.dll, txt2gam, AeroQSP, справка - <a href="https://github.com/QSPFound
 Чуть более сложные варианты с зацикливанием целых плейлистов представлены в статье <a href="https://aleksversus.github.io/howdo_faq/pages/kak_sdelat__plejlist_0035#faq_06_07" style="text-decoration:none;" class="emFOLD">"Как сделать плейлист?"</a>.
 </p>
 <p>
-Ну и самым продвинутым вариантом на сегодня является <a href="https://aleksversus.github.io/howdo_faq/informarch/None.html#informarch_flexible_playlist" style="text-decoration:none;" class="emFOLD">Гибкий плейлист от `Werewolf`а</a>.
+Ну и самым продвинутым вариантом на сегодня является <a href="https://aleksversus.github.io/howdo_faq/informarch/None.html#informarch_flexible_playlist" style="text-decoration:none;" class="emFOLD">Гибкий плейлист от <strong>Werewolf</strong>`а</a>.
 </p>
 <h5 id="kak-sdelat_-schitaemye-predmety-naprimer-patrony-50-sht">Как сделать "считаемые" предметы, например, "патроны: 50 шт."?</h5><p>
 А вот это вопрос довольно простой. Понятное и очевидное решение изложено в статье <a href="https://aleksversus.github.io/howdo_faq/pages/kak_delat__schitaeye_predmety_0093.html#faq_14_06" style="text-decoration:none;" class="emFOLD">"Как сделать считаемые предметы?"</a> в справочнике по самым часто задаваемым вопросам из темы "Как сделать?".
 </p>
 <p>
-Так же вы можете воспользоваться уже готовым решением в виде <a href="https://aleksversus.github.io/howdo_faq/informarch/None.html#informarch_ia_lib_ntropy" style="text-decoration:none;" class="emFOLD">библиотечки, дополняющей инвентарь</a> от `Ntropy`.
+Так же вы можете воспользоваться уже готовым решением в виде <a href="https://aleksversus.github.io/howdo_faq/informarch/None.html#informarch_ia_lib_ntropy" style="text-decoration:none;" class="emFOLD">библиотечки, дополняющей инвентарь</a> от <strong>Ntropy</strong>.
 </p>
 <h5 id="kak-sdelat_-perehod-na-metku-v-lokatsii-iz-dejstviia">Как сделать переход на метку в локации из действия?</h5><p>
-Привычка к использованию оператора `JUMP` часто приводит автора к следующей проблеме:
+Привычка к использованию оператора <span class="em_BLCK">JUMP</span> часто приводит автора к следующей проблеме:
 </p>
 <p>
-он хочет сделать переход из действия на метку в коде локации, но `JUMP` не срабатывает.
+он хочет сделать переход из действия на метку в коде локации, но <span class="em_BLCK">JUMP</span> не срабатывает.
 </p>
 <p>
 Это связано с тем, что область видимости меток органичена блоком кода, в котором они находятся, а выполняемое действие - это отдельный блок кода.
@@ -265,7 +265,7 @@ qsp.dll, txt2gam, AeroQSP, справка - <a href="https://github.com/QSPFound
 Так же смотри <a href="http://aleksversus.narod.ru/index/peremennye_i_massivy_v_qsp/0-28" style="text-decoration:none;" class="emFOLD">статью о том, что такое массивы</a> на сайте aleksversus.narod.ru.
 </p>
 <h5 id="ispol_zovanie-figurnyh-skobok">Использование фигурных скобок</h5><p>
-Фигурные скобки в QSP предназначены в освновном для того, чтобы записывать обычный код QSP в виде текстового значения. Например, мы можем вписать в переменную `$somecode` некоторый код:
+Фигурные скобки в QSP предназначены в освновном для того, чтобы записывать обычный код QSP в виде текстового значения. Например, мы можем вписать в переменную <span class="em_BLCK">$somecode</span> некоторый код:
 </p>
 <div class="Monokai-Code">
 $somecode<span class="Monokai-Operator">=</span><span class="Monokai-Operator">{</span><br/>
@@ -289,7 +289,7 @@ $somecode<span class="Monokai-Operator">=</span><span class="Monokai-Operator">{
 Подробнее можно прочесть здесь: <a href="https://aleksversus.github.io/howdo_faq/pages/qsp-keyword_0179.html#faq_80_05_curclybrackets" style="text-decoration:none;" class="emFOLD">"Фигурные скобки"</a>
 </p>
 <h5 id="modul_-olegusa-dlia-raboty-s-tablitsami-dannyh">Модуль Олегуса для работы с таблицами данных</h5><p>
-Таблицы данных — это не те таблицы, которые вы можете наблюдать на экране при использовании тега `"<table>"`. Таблицами данных называется определённый способ хранения данных в виде условных строк и столбцов.
+Таблицы данных — это не те таблицы, которые вы можете наблюдать на экране при использовании тега <span class="em_BLCK">"<table>"</span>. Таблицами данных называется определённый способ хранения данных в виде условных строк и столбцов.
 </p>
 <p>
 Olegus t.Gl. написал для QSP модуль работы с такими таблицами данных. Что с его помощью можно делать:
@@ -387,7 +387,7 @@ Olegus t.Gl. написал для QSP модуль работы с такими
 Не нашли ответа на свой вопрос? Спрашивайте здесь - <a href="https://qsp.org/index.php?option=com_agora&task=topic&id=40&Itemid=57" style="text-decoration:none;" class="emFOLD">Как сделать?</a>
 </p>
 <p>
-АВТОР: `NEX`  
+АВТОР: <strong>NEX</strong>  
 </p>
 <p>
 19.02.2009 09:15
