--- a/informarch/game_time_0015.html
+++ b/informarch/game_time_0015.html
@@ -44,7 +44,7 @@
 Также см. <a href="https://aleksversus.github.io/howdo_faq/informarch/None.html#informarch_calend_jul" style="text-decoration:none;" class="emFOLD">Календарь по методу счёта Юлианских дней</a>
 </p>
 <p>
-Автор: `NEX`
+Автор: <strong>NEX</strong>
 </p>
 <p>
 18.03.2011 15:13</p>
