--- a/informarch/gibkij_plejlist_0016.html
+++ b/informarch/gibkij_plejlist_0016.html
@@ -47,16 +47,16 @@ $music_theme&nbsp;<span class="Monokai-Operator">=</span>&nbsp;<span class="Mono
 </li>
 </ol>
 <p>
-Переменная `music_on` отвечает за включение/выключение плейлиста. Выключить плейлист можно также с помощью `$music_theme = ''`.
+Переменная <span class="em_BLCK">music_on</span> отвечает за включение/выключение плейлиста. Выключить плейлист можно также с помощью <span class="em_BLCK">$music_theme = </span>''.
 </p>
 <p>
-С помощью переменной `volume` изменяется громкость проигрывания.
+С помощью переменной <span class="em_BLCK">volume</span> изменяется громкость проигрывания.
 </p>
 <p>
-В переменной `$music_theme` хранится название текущей темы. При ее изменении останавливается проигрывание текущей темы (при этом запоминается файл, на котором было остановлено проигрывание) и начинается прогрывание следующей.
+В переменной <span class="em_BLCK">$music_theme</span> хранится название текущей темы. При ее изменении останавливается проигрывание текущей темы (при этом запоминается файл, на котором было остановлено проигрывание) и начинается прогрывание следующей.
 </p>
 <p>
-Автор: `WEREWOLF`
+Автор: <strong>WEREWOLF</strong>
 </p>
 <p>
 06.04.2010 15:26
