--- a/informarch/informatsija_o_qsp_0002.html
+++ b/informarch/informatsija_o_qsp_0002.html
@@ -17,7 +17,7 @@
             <!-- body start -->
 <div style="display:flex;justify-content:space-between;"><div><a href="https://aleksversus.github.io/howdo_faq/informarch/faq_po_qsp_0001.html" class="emHREFTT">&lt; Назад, к странице 2</a></div><div><a href="https://aleksversus.github.io/howdo_faq/informarch/nash_put__0003.html" class="emHREFTT">Вперёд, к странице 4 &gt;</a></div></div>
 <h5 id="informarch_qspinfo">Информация о QSP</h5><p>
-`QSP`, она же `Quest Soft Player`  - система разработки текстовых игр, преимущественно с "менюшным" вводом (существует возможность создания полноценного парсера). Система включает в себя кроссплатформенный проигрыватель, а также разнообразные утилиты для разработки игр. Подробный файл справки, простой синтаксис и множество примеров позволят Вам освоить QSP максимально быстро.
+<span class="em_BLCK">QSP</span>, она же <span class="em_BLCK">Quest Soft Player</span>  - система разработки текстовых игр, преимущественно с "менюшным" вводом (существует возможность создания полноценного парсера). Система включает в себя кроссплатформенный проигрыватель, а также разнообразные утилиты для разработки игр. Подробный файл справки, простой синтаксис и множество примеров позволят Вам освоить QSP максимально быстро.
 </p>
 <p>
 Автор QSP и главный разработчик - Аргунов Валерий aka Byte. Лицензия: GNU GPL.
@@ -41,7 +41,7 @@ qsp.dll, txt2gam, AeroQSP, справка - <a href="https://github.com/QSPFound
 Редактор игр QGen - <a href="http://my-trac.assembla.com/q-gen" style="text-decoration:none;" class="emFOLD">http://my-trac.assembla.com/q-gen</a> (нынешняя версия на wxWidgets), <a href="https://github.com/rrockru/QtQGen" style="text-decoration:none;" class="emFOLD">https://github.com/rrockru/QtQGen</a> (будущая версия на Qt)
 </p>
 <p>
-АВТОР: `BYTE`   
+АВТОР: <strong>BYTE</strong>  
 </p>
 <p>
 01.06.2010 11:20</p>
