--- a/informarch/instruktsija_po_smene_oformlenija_iz_koda_igry_0042.html
+++ b/informarch/instruktsija_po_smene_oformlenija_iz_koda_igry_0042.html
@@ -23,9 +23,9 @@ $BACKIMAGE в Навигаторе отключен, как и другие пе
 Переключение фонов я делаю так.
 </p>
 <ol>
-<li>В CSS прописываю стили для классов элемента `BODY`. Каждому классу соответствует свой фон.</li>
-<li>В Javascript-файле скина описываю функцию, которая меняет класс `BODY`.</li>
-<li>В игре, при заходе на локацию, проверяю, какой нужен фон, и вызываю функцию Javascript. В элементе `BODY` меняется класс, а за ним меняется и фон.</li>
+<li>В CSS прописываю стили для классов элемента <span class="em_BLCK">BODY</span>. Каждому классу соответствует свой фон.</li>
+<li>В Javascript-файле скина описываю функцию, которая меняет класс <span class="em_BLCK">BODY</span>.</li>
+<li>В игре, при заходе на локацию, проверяю, какой нужен фон, и вызываю функцию Javascript. В элементе <span class="em_BLCK">BODY</span> меняется класс, а за ним меняется и фон.</li>
 </ol>
 <p>
 Помимо фона, точно таким же образом можно менять и расположение окон, отступы от границ окна и прочие вещи. Это позволяет, например, красиво оформить "обложку" - заглавный экран игры.
