--- a/informarch/ispol_zovanie_massivov_0017.html
+++ b/informarch/ispol_zovanie_massivov_0017.html
@@ -17,7 +17,7 @@
             <!-- body start -->
 <div style="display:flex;justify-content:space-between;"><div><a href="https://aleksversus.github.io/howdo_faq/informarch/gibkij_plejlist_0016.html" class="emHREFTT">&lt; Назад, к странице 18</a></div><div><a href="https://aleksversus.github.io/howdo_faq/informarch/dopolnenie_inventarja_0018.html" class="emHREFTT">Вперёд, к странице 20 &gt;</a></div></div>
 <h5 id="informarch_usethemassive">Использование массивов</h5><p>
-Вкратце: в QSP есть возможность использовать массивы. Значит вместо одного значения одной переменной `x = 10`, можно сохранить несколько значение под одним именем, указывая в скобках после имени переменной код или индекс очередного значения вот так:
+Вкратце: в QSP есть возможность использовать массивы. Значит вместо одного значения одной переменной <span class="em_BLCK">x = 10</span>, можно сохранить несколько значение под одним именем, указывая в скобках после имени переменной код или индекс очередного значения вот так:
 </p>
 <div class="Monokai-Code">
 x<span class="Monokai-Operator">[</span><span class="Monokai-Numeric">0</span><span class="Monokai-Operator">]</span>&nbsp;<span class="Monokai-Operator">=</span>&nbsp;<span class="Monokai-Numeric">10</span><br/>
@@ -42,7 +42,7 @@ $я&nbsp;<span class="Monokai-Operator">=</span>&nbsp;<span class="Monokai-Strin
 сила<span class="Monokai-Operator">[</span>$я<span class="Monokai-Operator">]</span>&nbsp;<span class="Monokai-Operator">=</span>&nbsp;<span class="Monokai-Numeric">2</span><br/>
 </div>
 <p>
-Значок `"$"` показывает что переменная строковая.
+Значок <span class="em_BLCK">"$"</span> показывает что переменная строковая.
 </p>
 <p>
 Начиная с версии плеера 5.8.0 можно создавать многомерные массивы без использования строковых индексов:
@@ -82,10 +82,10 @@ $имя_персонажа<span class="Monokai-Operator">[</span><span class="Mo
 В этом примере у нас массив 2-х мерный. А измерений может быть и больше.
 </p>
 <p>
-Автор: `Ntropy`
+Автор: <strong>Ntropy</strong>
 </p>
 <p>
-Отредактировал для соответствия версии библиотеке 5.8.0: Aleks Versus  
+Отредактировал для соответствия версии библиотеке 5.8.0: <strong>Aleks Versus</strong>
 </p>
 <p>
 26.Июл.10 12:08:22
