--- a/informarch/izmenit__kursor_0035.html
+++ b/informarch/izmenit__kursor_0035.html
@@ -44,7 +44,7 @@
 В этом случае файл курсора должен лежать на одном уровне с игрой или во вложенной папке, и путь до файла курсора указывается относительно файла игры.
 </p>
 <p>
-Примечание: твёрдого убеждения, что это будет работать у меня нет, я не проверял. Если есть уточнения по любому из этих способов пишите на `aleksversus@mail.ru`.
+Примечание: твёрдого убеждения, что это будет работать у меня нет, я не проверял. Если есть уточнения по любому из этих способов пишите на <span class="em_BLCK">aleksversus@mail.ru</span>.
 </p>
 <div style="display:flex;justify-content:space-between;"><div><a href="https://aleksversus.github.io/howdo_faq/informarch/kak_izmenit__tsvet_fona_0034.html" class="emHREFTT">&lt; Назад, к странице 27</a></div><div><a href="https://aleksversus.github.io/howdo_faq/informarch/nastrojka_shablona_0036.html" class="emHREFTT">Вперёд, к странице 29 &gt;</a></div></div>
 <!-- body end -->
