--- a/informarch/modal_window_0043.html
+++ b/informarch/modal_window_0043.html
@@ -20,7 +20,7 @@
 В Quest Navigator Вы можете самостоятельно написать такое окошко, даже не прибегая к помощи JavaScript.
 </p>
 <p>
-Далее следует готовое решение от `evp` с комментариями от `Aleks Versus`.
+Далее следует готовое решение от <strong>evp</strong> с комментариями от <strong>Aleks Versus</strong>.
 </p>
 <p>
 В игре:
