--- a/informarch/nash_put__0003.html
+++ b/informarch/nash_put__0003.html
@@ -24,7 +24,7 @@
 </p>
 <ul>
 <li>Во-первых, QSP появился до того, как Python стал популярен.</li>
-<li>Во-вторых, QSP проще `Python`а в изучении (это важно, так как платформа ориентирована на начинающих).</li>
+<li>Во-вторых, QSP проще <span class="em_BLCK">Python</span>а в изучении (это важно, так как платформа ориентирована на начинающих).</li>
 <li>В-третьих, свой интерпретатор позволяет сделать синтаксис более специализированным.</li>
 <li>В-четвертых, интерпретатор QSP легче Python (Python - монстр при встраивании, во всяком случае так было раньше).</li>
 <li>В-пятых, я не люблю идею вездесущих отступов для корректности программ (в теории это требование делает код более понятным, но мне, к примеру, сложно ориентироваться в Python-коде).</li>
@@ -36,7 +36,7 @@
 Ну и, конечно же, изначально хотелось поэкспериментировать с синтаксисом и интерпретацией :)
 </p>
 <p>
-Автор: `Byte`
+Автор: <strong>Byte</strong>
 </p>
 <p>
 20.09.2020 15:03
