--- a/informarch/nastrojka_shablona_0036.html
+++ b/informarch/nastrojka_shablona_0036.html
@@ -63,7 +63,7 @@
 Давайте пробежимся по ключевым моментам, чтобы понять, что к чему.
 </p>
 <p>
-Во-первых, чтобы наглядно видеть, где что располагается в вашем шаблоне, откройте в Quest Navigator такую игру, в которой есть вывод во все четыре окна: основного, дополнительного описаний, в окно предметов и в окно действий. Ещё не мешало бы, чтобы в этой игре можно было вызывать различные диалоговые окна, вроде пользовательского меню, окон `msg`, `$input` и других.
+Во-первых, чтобы наглядно видеть, где что располагается в вашем шаблоне, откройте в Quest Navigator такую игру, в которой есть вывод во все четыре окна: основного, дополнительного описаний, в окно предметов и в окно действий. Ещё не мешало бы, чтобы в этой игре можно было вызывать различные диалоговые окна, вроде пользовательского меню, окон <span class="em_BLCK">msg</span>, <span class="em_BLCK">$input</span> и других.
 </p>
 <p>
 Откройте "gameAwesomium.html" в любом текстовом редакторе, а лучше в редакторе с подсветкой кода, например в SublimeText.
@@ -216,7 +216,7 @@ skinToggleInv();
 А уже здесь размещены блоки:
 </p>
 <h6 id="qsp-view">qsp-view</h6><p>
-"qsp-view" — отвечает за отображение окна предпросмотра (оператор `view`). [С этим блоком работают скрипты в api.js, однако его удаление не меняет функциональности оператора `view`.]
+"qsp-view" — отвечает за отображение окна предпросмотра (оператор <span class="em_BLCK">view</span>). [С этим блоком работают скрипты в api.js, однако его удаление не меняет функциональности оператора <span class="em_BLCK">view</span>.]
 </p>
 <h6 id="qsp-vars">qsp-vars</h6><p>
 "qsp-vars" — отвечает за отображение окна дополнительного описания. В дефолтном шаблоне это окно отображается выше окна основного описания
