--- a/informarch/ne_rabotaet_giperssylka_v_aeroqsp_0045.html
+++ b/informarch/ne_rabotaet_giperssylka_v_aeroqsp_0045.html
@@ -26,7 +26,7 @@
 О:
 </p>
 <p>
-Будьте очень аккуратны, когда работаете с блоками в AeroQSP. Необходимо помнить, что вся HTML-разметка должна выводиться одной строкой, особенно блоковые элементы, такие как `DIV` или заголовки.
+Будьте очень аккуратны, когда работаете с блоками в AeroQSP. Необходимо помнить, что вся HTML-разметка должна выводиться одной строкой, особенно блоковые элементы, такие как <span class="em_BLCK">DIV</span> или заголовки.
 </p>
 <div class="Monokai-Code">
 <span class="Monokai-Operator"></span><span class="Monokai-Comment">!&nbsp;нельзя:&nbsp;</span><br/>
