--- a/informarch/obnovlenie_do_5.7.0_0023.html
+++ b/informarch/obnovlenie_do_5.7.0_0023.html
@@ -53,7 +53,7 @@
 Скачать всё можно на странице <a href="https://qsp.org/index.php?option=com_content&view=article&id=57&Itemid=56" style="text-decoration:none;" class="emFOLD">"Разработчикам"</a>. 
 </p>
 <p>
-Автор: `BYTE`
+Автор: <span class="em_BLCK">BYTE</span>
 </p>
 <p>
 13.06.2010 22:39
