--- a/informarch/otladchik_0021.html
+++ b/informarch/otladchik_0021.html
@@ -27,9 +27,9 @@
 </p>
 <ul>
 <li>Распаковать архив в папку с игрой</li>
-<li>Добавить в первую локацию команду: `addqst 'lib/debugger.qsp'`, для загрузки отладчика</li>
-<li>Включить отладочный режим: `debug = 1`, для плеера</li>
-<li>Добавить команду: `gs 'debugger_init'`, для включения отладчика</li>
+<li>Добавить в первую локацию команду: <span class="em_BLCK">addqst 'lib/debugger.qsp</span>', для загрузки отладчика</li>
+<li>Включить отладочный режим: <span class="em_BLCK">debug = 1</span>, для плеера</li>
+<li>Добавить команду: <span class="em_BLCK">gs 'debugger_init</span>', для включения отладчика</li>
 </ul>
 <p>
 Основным недостатком первой версии было то, что команды можно было вводить только через строку ввода. Вызов команд из кода был затруднен, и создание новых команд требовало знания структуры и принципа отладчика. Кроме того у части команд был не совсем удобный вызов. В новой версии я постарался решить все эти проблемы.
@@ -38,71 +38,71 @@
 Для этого были сделаны следующие изменения:
 </p>
 <ul>
-<li>добавлена возможность вызвать команду отладчика из кода (в предыдущей версии вызов команды был тесно связан с строкой ввода и сделать это было довольно проблематично)	например: `gs 'debugger_process', 'addvar test'`
+<li>добавлена возможность вызвать команду отладчика из кода (в предыдущей версии вызов команды был тесно связан с строкой ввода и сделать это было довольно проблематично)	например: <span class="em_BLCK">gs 'debugger_process', 'addvar test</span>'
 </li>
-<li>обавлена возможность ввести несколько команд одновреммено разделив их & (в предыдущей версии была бы отработана только первая команда)	например: `addVar test & test = 3 & showVars`
+<li>обавлена возможность ввести несколько команд одновреммено разделив их & (в предыдущей версии была бы отработана только первая команда)	например: <span class="em_BLCK">addVar test & test = 3 & showVars</span>
 </li>
-<li>добавлена возможность ввода `<<` и `>>` (в предыдущей версии были проблемы с отображением и обработкой)</li>
-<li>добавлена возможность запланировать выполнение команды отладчика - для этого необходимо добавить перед командой >	например: `>showVars gs 'test_loc' >showVars`
-	здесь команды `showVars` будут выполнены не сразу после ввода, а только когда код будет запущен через run
+<li>добавлена возможность ввода <span class="em_BLCK"><<</span> и <span class="em_BLCK">>></span> (в предыдущей версии были проблемы с отображением и обработкой)</li>
+<li>добавлена возможность запланировать выполнение команды отладчика - для этого необходимо добавить перед командой >	например: <span class="em_BLCK">>showVars gs 'test_loc' >showVars</span>
+	здесь команды <span class="em_BLCK">showVars</span> будут выполнены не сразу после ввода, а только когда код будет запущен через run
 </li>
-<li>в `addVar` и `delVar` теперь можно передавать несколько имен переменных разделенных пробелом	например: `addvar test[0] test[3] $test`
+<li>в <span class="em_BLCK">addVar</span> и <span class="em_BLCK">delVar</span> теперь можно передавать несколько имен переменных разделенных пробелом	например: <span class="em_BLCK">addvar test[0] test[3] $test</span>
 </li>
-<li>в `run` вторым параметром можно передать название переменной с кодом для выполнения (похоже на вызов `load $var & run`, только код не загружается в список команд)</li>
+<li>в <span class="em_BLCK">run</span> вторым параметром можно передать название переменной с кодом для выполнения (похоже на вызов <span class="em_BLCK">load $var & run</span>, только код не загружается в список команд)</li>
 <li>добавлена команда clearVars для очистки списка переменных</li>
-<li>добавлены команды для отслеживания логических выражений `addCond`, `delCond`, `showCond`, `clearCond` (об этом писал на форуме `invertercant`)	например: `addcond test1 > test2 & showcond`
+<li>добавлены команды для отслеживания логических выражений <span class="em_BLCK">addCond</span>, <span class="em_BLCK">delCond</span>, <span class="em_BLCK">showCond</span>, <span class="em_BLCK">clearCond</span> (об этом писал на форуме <span class="em_BLCK">invertercant</span>)	например: <span class="em_BLCK">addcond test1 > test2 & showcond</span>
 </li>
-<li>в `help` вторым параметром можно передать название команды для просмотра информации по ней</li>
-<li>добавлены команды `createCommand`, `loadCommand`, `updateCommand` и `deleteCommand` для создания пользовательских команд	все параметры переданные после названия команды доступны в массиве `$debugger_args`
-	в принципе с помощью `createCommand` можно перегрузить любую команду отладчика, но пользоваться этой возможностью нужно с осторожностью
+<li>в <span class="em_BLCK">help</span> вторым параметром можно передать название команды для просмотра информации по ней</li>
+<li>добавлены команды <span class="em_BLCK">createCommand</span>, <span class="em_BLCK">loadCommand</span>, <span class="em_BLCK">updateCommand</span> и <span class="em_BLCK">deleteCommand</span> для создания пользовательских команд	все параметры переданные после названия команды доступны в массиве <span class="em_BLCK">$debugger_args</span>
+	в принципе с помощью <span class="em_BLCK">createCommand</span> можно перегрузить любую команду отладчика, но пользоваться этой возможностью нужно с осторожностью
 </li>
-<li>добавлен "визуальный" режим для тех, кто не хочет учить команды:)	для его использования при вызове `debugger_init` первым параметром передайте `1` в локацию-обработчик выбора предмета добавьте
-	`if $selobj = 'Отладчик': menu '$visual_main'`
+<li>добавлен "визуальный" режим для тех, кто не хочет учить команды:)	для его использования при вызове <span class="em_BLCK">debugger_init</span> первым параметром передайте <span class="em_BLCK">1</span> в локацию-обработчик выбора предмета добавьте
+	<span class="em_BLCK">if $selobj = 'Отладчик': menu '$visual_main</span>'
 </li>
 </ul>
 <p>
-При запущенной игре, команды передаются через строку ввода. Первой стоит запустить команду: `help`
+При запущенной игре, команды передаются через строку ввода. Первой стоит запустить команду: <span class="em_BLCK">help</span>
 </p>
 <p>
 У команд в фигурных скобках указаны обязательные параметры, а в круглых необязательные.
 </p>
 <h5 id="osnovnye-komandy-i-nastrojki">Основные команды и настройки</h5><ul>
-<li>`debugger {0 | 1}` - Включение/отключение отладчика</li>
-<li>`showMode {msg | pl | p | <em>pl | </em>p}` - изменение режима вывода информации, по умолчанию msg</li>
-<li>`autoShow {0 | 1} (msg | pl | p | <em>pl | </em>p)` - Включение/отключение автоматического показа кода после каждого изменения, с помощью третьего аргумента можно изменить режим вывода</li>
-<li>`help (название команды)` - список команд или информация об определенной команде</li>
+<li><span class="em_BLCK">debugger {0 | 1}</span> - Включение/отключение отладчика</li>
+<li><span class="em_BLCK">showMode {msg | pl | p | <em>pl | </em>p}</span> - изменение режима вывода информации, по умолчанию msg</li>
+<li><span class="em_BLCK">autoShow {0 | 1} (msg | pl | p | <em>pl | </em>p)</span> - Включение/отключение автоматического показа кода после каждого изменения, с помощью третьего аргумента можно изменить режим вывода</li>
+<li><span class="em_BLCK">help (название команды)</span> - список команд или информация об определенной команде</li>
 </ul>
 <h5 id="spisok-peremennyh-dlia-vyvoda">Список переменных для вывода</h5><ul>
-<li>`addVar {название переменной}` - добавление переменной в список отображения (можно указывать несколько переменных через пробел)</li>
-<li>`delVar {название переменной}` - удаление переменной из списка отображения (можно указывать несколько переменных через пробел)</li>
-<li>`showVars` - отображение списка переменных, зависит от режима вывода информации</li>
-<li>`clearVars` - очистка списка переменных</li>
+<li><span class="em_BLCK">addVar {название переменной}</span> - добавление переменной в список отображения (можно указывать несколько переменных через пробел)</li>
+<li><span class="em_BLCK">delVar {название переменной}</span> - удаление переменной из списка отображения (можно указывать несколько переменных через пробел)</li>
+<li><span class="em_BLCK">showVars</span> - отображение списка переменных, зависит от режима вывода информации</li>
+<li><span class="em_BLCK">clearVars</span> - очистка списка переменных</li>
 </ul>
 <h5 id="spisok-logicheskih-vyrazhenij-dlia-vyvoda">Список логических выражений для вывода</h5><ul>
-<li>`addCond {название переменной}` - добавление логического выражения в список отображения</li>
-<li>`delCond {название переменной}` - удаление логического выражения из списка отображения</li>
-<li>`showCond` - отображение списка логических выражений, зависит от режима вывода информации</li>
-<li>`clearCond` - очистка списка логических выражений</li>
+<li><span class="em_BLCK">addCond {название переменной}</span> - добавление логического выражения в список отображения</li>
+<li><span class="em_BLCK">delCond {название переменной}</span> - удаление логического выражения из списка отображения</li>
+<li><span class="em_BLCK">showCond</span> - отображение списка логических выражений, зависит от режима вывода информации</li>
+<li><span class="em_BLCK">clearCond</span> - очистка списка логических выражений</li>
 </ul>
 <h5 id="otladochnyj-kusochek-koda">Отладочный кусочек кода</h5><ul>
-<li>`run (название переменной)` - Выполнение набраного кода(по умолчанию после выполнения код очищается) или кода из определенной переменной</li>
-<li>`clearCode` - Очистка набранного кода, по умолчанию вызывается при каждом выполнении кода</li>
-<li>`show `- Отображение введенного кода, отображение зависит от режима, по умолчанию происходит очистка окна отображения, если не используется msg</li>
-<li>`edit {номер строки} {строка кода}` - замена строки с определенным номером</li>
-<li>`delete {номер строки}` - удаление строки с определенным номером</li>
-<li>`delete {номер строки}-{номер строки}` - удаление группы строк</li>
-<li>`insert {строка кода}` - вставка кода в начало</li>
-<li>`insert {номер строки} {строка кода}` - вставка кода после определенной строки</li>
+<li><span class="em_BLCK">run (название переменной)</span> - Выполнение набраного кода(по умолчанию после выполнения код очищается) или кода из определенной переменной</li>
+<li><span class="em_BLCK">clearCode</span> - Очистка набранного кода, по умолчанию вызывается при каждом выполнении кода</li>
+<li><span class="em_BLCK">show </span>- Отображение введенного кода, отображение зависит от режима, по умолчанию происходит очистка окна отображения, если не используется msg</li>
+<li><span class="em_BLCK">edit {номер строки} {строка кода}</span> - замена строки с определенным номером</li>
+<li><span class="em_BLCK">delete {номер строки}</span> - удаление строки с определенным номером</li>
+<li><span class="em_BLCK">delete {номер строки}-{номер строки}</span> - удаление группы строк</li>
+<li><span class="em_BLCK">insert {строка кода}</span> - вставка кода в начало</li>
+<li><span class="em_BLCK">insert {номер строки} {строка кода}</span> - вставка кода после определенной строки</li>
 </ul>
 <h5 id="sohranenie-i-zapis_-otladochnogo-koda">Сохранение и запись отладочного кода</h5><ul>
-<li>`save (название переменной)` - сохранение кода в переменную, если переменная не указана, выполняется автосохранение, по умолчанию автосохранение выполняется при каждом выполнении кода до его очистки</li>
-<li>`load (название переменной)` - загрузка кода из переменной, если переменная не указана загружается автосохранение</li>
+<li><span class="em_BLCK">save (название переменной)</span> - сохранение кода в переменную, если переменная не указана, выполняется автосохранение, по умолчанию автосохранение выполняется при каждом выполнении кода до его очистки</li>
+<li><span class="em_BLCK">load (название переменной)</span> - загрузка кода из переменной, если переменная не указана загружается автосохранение</li>
 </ul>
 <p>
 Скачать отладчик: <a href="https://qsp.org/attachments/debugger2beta.zip" style="text-decoration:none;" class="emFOLD">debugger2beta.zip</a>
 </p>
 <p>
-Автор: `WEREWOLF`
+Автор: <strong>WEREWOLF</strong>
 </p>
 <p>
 05.04.2010 13:34</p>
