--- a/informarch/plavnoe_izmenenie_0020.html
+++ b/informarch/plavnoe_izmenenie_0020.html
@@ -20,7 +20,7 @@
 Плавное изменение цвета фона может придать Вашей игре больше атмосферности. Так же, это снизит напряжение на глаза при смене цвета фона (по сравнению с резким).
 </p>
 <p>
-Функция будет называться `!coloring` и вызываться так:
+Функция будет называться <span class="em_BLCK">!coloring</span> и вызываться так:
 </p>
 <div class="Monokai-Code">
 <span class="Monokai-Operator">gs</span>&nbsp;<span class="Monokai-String">'!coloring'</span><span class="Monokai-Operator">,</span><span class="Monokai-Numeric">200</span><span class="Monokai-Operator">,</span><span class="Monokai-Numeric">200</span><span class="Monokai-Operator">,</span><span class="Monokai-Numeric">200</span><br/>
@@ -29,7 +29,7 @@
 Где три числа соответственно цвета RGB от 0 до 255.
 </p>
 <p>
-Код локации `!coloring`
+Код локации <span class="em_BLCK">!coloring</span>
 </p>
 <div class="Monokai-Code">
 <span class="Monokai-Operator"></span><span class="Monokai-Comment">!Вызов&nbsp;функции&nbsp;с&nbsp;передачей&nbsp;3-х&nbsp;аргументов,&nbsp;это&nbsp;3&nbsp;цвета&nbsp;RGB</span><span class="Monokai-Operator"><br/>
@@ -83,10 +83,10 @@ b2&nbsp;<span class="Monokai-Operator">=</span>&nbsp;<span class="Monokai-SysVar
 где в скобках цвета в RGB
 </p>
 <p>
-Примечание: использование `WAIT` а не локации-счётчика `COUNTER` обусловлено тем, что подразумевается, что смена цвета будет происходить быстро (рекомендуемое время TIMEOFWAIT = 5). Если автор хочет сделать плавную смену дня и ночи, лучше будет воспользоваться `COUNTER`ом.
+Примечание: использование <span class="em_BLCK">WAIT</span> а не локации-счётчика <span class="em_BLCK">COUNTER</span> обусловлено тем, что подразумевается, что смена цвета будет происходить быстро (рекомендуемое время TIMEOFWAIT = 5). Если автор хочет сделать плавную смену дня и ночи, лучше будет воспользоваться <span class="em_BLCK">COUNTER</span>`ом.
 </p>
 <p>
-Автор: `ANTIPOD`
+Автор: <strong>ANTIPOD</strong>
 </p>
 <p>
 20.05.2011 09:23
