--- a/informarch/polka_igr_0007.html
+++ b/informarch/polka_igr_0007.html
@@ -61,7 +61,7 @@
 <li>В архиве не должно быть папок и файлов с русскими буквами в имени.</li>
 </ul>
 <p>
-Автор: `Nex`
+Автор: <strong>Nex</strong>
 </p>
 <p>
 26.Сен.10 11:29:12
