--- a/informarch/preprotsessor_0012.html
+++ b/informarch/preprotsessor_0012.html
@@ -32,34 +32,34 @@
 Чтобы воспользоваться этим, нужно добавить в текст специальные инструкции и обработать текст утилитой GPP. После такой обработки текст уже не будет содержать инструкции и может быть преобразован в QSP-файл без ошибок.
 </p>
 <h5 id="instruktsii-osnovnye">Инструкции (основные)</h5><p>
-`#mode quote` — отключает обработку символа "\" как служебного, рекомендуется поставить первой строчкой файла
+<span class="em_BLCK">#mode quote</span> — отключает обработку символа "\" как служебного, рекомендуется поставить первой строчкой файла
 </p>
 <p>
-`#define` <имя> — определить флажок, на который можно будет позже ссылаться
+<span class="em_BLCK">#define</span> <имя> — определить флажок, на который можно будет позже ссылаться
 </p>
 <p>
-`#define` <имя> <значение> — определить значение, на которое можно будет позже ссылаться
+<span class="em_BLCK">#define</span> <имя> <значение> — определить значение, на которое можно будет позже ссылаться
 </p>
 <p>
-`#undef` <имя> — удаление значения или флажка
+<span class="em_BLCK">#undef</span> <имя> — удаление значения или флажка
 </p>
 <p>
-`#ifdef` <имя> — если флаг или значение определены, то весь текст после этого условия до `#endif` или до `#else` будет выведен в итоговый файл
+<span class="em_BLCK">#ifdef</span> <имя> — если флаг или значение определены, то весь текст после этого условия до <span class="em_BLCK">#endif</span> или до <span class="em_BLCK">#else</span> будет выведен в итоговый файл
 </p>
 <p>
-`#else` — окончание фрагмента, регулируемого инструкцией `#ifdef` - последующий текст выводится, если условие в `#ifdef` не выполнено
+<span class="em_BLCK">#else</span> — окончание фрагмента, регулируемого инструкцией <span class="em_BLCK">#ifdef</span> - последующий текст выводится, если условие в <span class="em_BLCK">#ifdef</span> не выполнено
 </p>
 <p>
-`#endif` — окончание фрагмента, регулируемого инструкцией `#ifdef` или `#else`
+<span class="em_BLCK">#endif</span> — окончание фрагмента, регулируемого инструкцией <span class="em_BLCK">#ifdef</span> или <span class="em_BLCK">#else</span>
 </p>
 <p>
-`#ifndef` — аналогично `#ifdef,` однако проверяется, что флаг или значение не определены - весь текст после этого условия до `#endif` или до `#else` будет выведен в итоговый файл
+<span class="em_BLCK">#ifndef</span> — аналогично <span class="em_BLCK">#ifdef,</span> однако проверяется, что флаг или значение не определены - весь текст после этого условия до <span class="em_BLCK">#endif</span> или до <span class="em_BLCK">#else</span> будет выведен в итоговый файл
 </p>
 <p>
-`#include` "<имя файла>" — в выходной файл вставляет текст из указанного файла (из той же папки) - если файл содержит инструкции, то он также будет обработан
+<span class="em_BLCK">#include</span> "<имя файла>" — в выходной файл вставляет текст из указанного файла (из той же папки) - если файл содержит инструкции, то он также будет обработан
 </p>
 <p>
-Поскольку в `txt2gam`, по умолчанию, для обозначения начала локации используется символ "#", то важно, чтобы имена локаций не назывались по имени инструкции (`define`, `ifdef`, и т.п.). Также не стоит включать инструкции в комментарии и строки, лучше их записывать на отдельных строчках.
+Поскольку в <span class="em_BLCK">txt2gam</span>, по умолчанию, для обозначения начала локации используется символ "#", то важно, чтобы имена локаций не назывались по имени инструкции (<span class="em_BLCK">define</span>, <span class="em_BLCK">ifdef</span>, и т.п.). Также не стоит включать инструкции в комментарии и строки, лучше их записывать на отдельных строчках.
 </p>
 <p>
 Доступны также и другие инструкции, о них можно узнать в документации или спросить на форуме.
@@ -98,7 +98,7 @@ gpp.exe <входной файл> -o <выходной файл>
 -&nbsp;Start</span><br/>
 </div>
 <p>
-Если же убрать инструкцию `#define` - например, заменив на `#undef,` то после обработки в выходной файл запишется:
+Если же убрать инструкцию <span class="em_BLCK">#define</span> - например, заменив на <span class="em_BLCK">#undef,</span> то после обработки в выходной файл запишется:
 </p>
 <div class="Monokai-Code">
 <span class="Monokai-StartLoc">#&nbsp;Start</span><span class="Monokai-EndLoc"><br/>
@@ -106,7 +106,7 @@ gpp.exe <входной файл> -o <выходной файл>
 -&nbsp;Start</span><br/>
 </div>
 <p>
-То есть текст, регулируемый инструкцией `#ifdef,` был удален из конечного результата.
+То есть текст, регулируемый инструкцией <span class="em_BLCK">#ifdef,</span> был удален из конечного результата.
 </p>
 <p>
 Прошу задавать вопросы на форуме.
@@ -120,7 +120,7 @@ gpp.exe <входной файл> -o <выходной файл>
 <li><a href="http://en.nothingisreal.com/wiki/GPP" style="text-decoration:none;" class="emFOLD">Домашний сайт GPP</a></li>
 </ul>
 <p>
-АВТОР: `NTROPY`  
+АВТОР: <strong>NTROPY</strong> 
 </p>
 <p>
 07.04.2010 18:47
