--- a/informarch/proverka_pleera_0037.html
+++ b/informarch/proverka_pleera_0037.html
@@ -23,7 +23,7 @@
 О:
 </p>
 <p>
-На данный момент существует только костыльный способ, предложенный `newsash`:
+На данный момент существует только костыльный способ, предложенный <strong>newsash</strong>:
 </p>
 <div class="Monokai-Code">
 t<span class="Monokai-Operator">=</span><span class="Monokai-Numeric">1</span><br/>
@@ -40,7 +40,7 @@ tort<span class="Monokai-Operator">=</span><span class="Monokai-Numeric">0</span
 Данный способ работает благодаря разнице в интерпретации однострочной команды, разбитой на несколько строк.
 </p>
 <p>
-В классическом плеере оператору условия передаётся имя переменной `tort`, тогда как в Quest Navigator это выражение
+В классическом плеере оператору условия передаётся имя переменной <span class="em_BLCK">tort</span>, тогда как в Quest Navigator это выражение
 </p>
 <div class="Monokai-Code">
 t&nbsp;<span class="Monokai-Func">or</span>&nbsp;t<br/>
@@ -49,7 +49,7 @@ t&nbsp;<span class="Monokai-Func">or</span>&nbsp;t<br/>
 , результат которого равен 1.
 </p>
 <p>
-В самом Quest Navigator есть встроенная функция `$GETPLAYER`, которая позволяет получить название плеера, на котором запущена игра:
+В самом Quest Navigator есть встроенная функция <span class="em_BLCK">$GETPLAYER</span>, которая позволяет получить название плеера, на котором запущена игра:
 </p>
 <div class="Monokai-Code">
 $GETPLAYER<span class="Monokai-Operator">(</span><span class="Monokai-String">"player"</span><span class="Monokai-Operator">)</span><br/>
