--- a/informarch/rabota_v_tekstovom_redaktore_0011.html
+++ b/informarch/rabota_v_tekstovom_redaktore_0011.html
@@ -43,7 +43,7 @@
 Проигрывание квеста начинается с самой первой локации. Традиционно эта локация называется "Начало". Для того, чтобы вывести в игре текст, вы просто пишете строку в коде локации, заключённую в кавычки ('' или "").
 </p>
 <p>
-Пример ("`1.txt`"):
+Пример ("<span class="em_BLCK">1.txt</span>"):
 </p>
 <div class="Monokai-Code">
 <span class="Monokai-StartLoc">#&nbsp;Начало</span><br/>
@@ -63,7 +63,7 @@
 Чтобы добавить интерактивности давайте сделаем вторую локацию и дадим возможность игроку перейти из одной локации в другую. Для этого нужно создать на первой локации действие, которое будет осуществлять переход в другую локацию.
 </p>
 <p>
-Пример ("`2.txt`"):
+Пример ("<span class="em_BLCK">2.txt</span>"):
 </p>
 <div class="Monokai-Code">
 <span class="Monokai-StartLoc">#&nbsp;Начало</span><br/>
@@ -100,7 +100,7 @@
 Напишем каркас.
 </p>
 <p>
-Пример ("`3.txt`"):
+Пример ("<span class="em_BLCK">3.txt</span>"):
 </p>
 <div class="Monokai-Code">
 <span class="Monokai-StartLoc">#&nbsp;Начало</span><br/>
@@ -139,7 +139,7 @@
 Сам механизм зарабатывания денег будет у нас очень простым. Нужно будет перенести 3 ящика и тогда бригадир будет давать игроку 5 монет. Для этого нужно будет сделать ещё одну переменную, в которой будет указано число перенесённых игроком ящиков и если их 3, то добавлять игроку деньги, и очищать счётчик ящиков. Наш квест станет таким:
 </p>
 <p>
-Пример ("`4.txt`"):
+Пример ("<span class="em_BLCK">4.txt</span>"):
 </p>
 <div class="Monokai-Code">
 <span class="Monokai-StartLoc">#&nbsp;Начало</span><br/>
@@ -175,13 +175,13 @@
 -</span><br/>
 </div>
 <p>
-Для того, чтобы в тексте локации вывести значение переменной используется конструкция `'<<Имя_переменной>>'`. Обратите внимание в каждой локации выводится количество монет у игрока. К тому же, в локации «Порт» показывается количество ящиков, которое нужно перенести, чтобы получить деньги.
+Для того, чтобы в тексте локации вывести значение переменной используется конструкция <span class="em_BLCK">'<<Имя_переменной>></span>'. Обратите внимание в каждой локации выводится количество монет у игрока. К тому же, в локации «Порт» показывается количество ящиков, которое нужно перенести, чтобы получить деньги.
 </p>
 <p>
-Ветвления в QSP задаются командой `IF`, после которой идёт условие и ставится двоеточие. Затем идут инструкции, которые выполняются, если условие верное и ставится завершающая команда `END`.
+Ветвления в QSP задаются командой <span class="em_BLCK">IF</span>, после которой идёт условие и ставится двоеточие. Затем идут инструкции, которые выполняются, если условие верное и ставится завершающая команда <span class="em_BLCK">END</span>.
 </p>
 <p>
-В нашем случае мы проверяем, равна ли переменная `Ящик` 3-м (все ли ящики перенесли). Если равна, то мы увеличиваем переменную «Деньги» на 5 (наш заработок) и сбрасываем переменную `Ящик` в 0, чтобы можно заново таскать ящики и зарабатывать деньги.
+В нашем случае мы проверяем, равна ли переменная <span class="em_BLCK">Ящик</span> 3-м (все ли ящики перенесли). Если равна, то мы увеличиваем переменную «Деньги» на 5 (наш заработок) и сбрасываем переменную <span class="em_BLCK">Ящик</span> в 0, чтобы можно заново таскать ящики и зарабатывать деньги.
 </p>
 <p>
 Чтобы текст игры обновился и игрок увидел новые значения переменных, нужно перейти на ту же локацию.
@@ -193,10 +193,10 @@
 Теперь добавим игроку возможность покупать различные предметы в магазине и затем дарить. Для предметов очень хорошо подходит «Инвентарь». Теперь купленные предметы игрок сможет носить с собой и дарить своим близким, когда захочет.
 </p>
 <p>
-Чтобы добавить предмет в инвентарь, есть команда `ADDOBJ`, после которой идёт имя предмета. А для того, чтобы удалить предмет, есть команда `DELOBJ`, после которой идёт имя удаляемого предмета.
+Чтобы добавить предмет в инвентарь, есть команда <span class="em_BLCK">ADDOBJ</span>, после которой идёт имя предмета. А для того, чтобы удалить предмет, есть команда <span class="em_BLCK">DELOBJ</span>, после которой идёт имя удаляемого предмета.
 </p>
 <p>
-Пример ("`5.txt`"):
+Пример ("<span class="em_BLCK">5.txt</span>"):
 </p>
 <div class="Monokai-Code">
 <span class="Monokai-StartLoc">#&nbsp;Начало</span><br/>
@@ -264,7 +264,7 @@
 Следующим важным моментом будет механизм «дарения» предметов. Он будет реализован в локации «Дом».
 </p>
 <p>
-Пример ("`6.txt`"):
+Пример ("<span class="em_BLCK">6.txt</span>"):
 </p>
 <div class="Monokai-Code">
 <span class="Monokai-StartLoc">#&nbsp;Начало</span><br/>
@@ -358,13 +358,13 @@
 -</span><br/>
 </div>
 <p>
-Конструкция `IF OBJ 'имя_предмета'` проверяет, есть ли у игрока в инвентаре указанный предмет. В нашем случае мы проверяем наличие тех предметов, которые мы можем купить в магазине. И если у игрока есть такие предметы - создаём действие «дарения» этих предметов. Когда игрок совершит действие, мы заберем у него тот предмет, который он хочет подарить и выводим диалог благодарности за подарок. К тому же, мы используем команду `DELACT`, которой удаляем действие, указанное после этой команды.
+Конструкция <span class="em_BLCK">IF OBJ 'имя_предмета</span>' проверяет, есть ли у игрока в инвентаре указанный предмет. В нашем случае мы проверяем наличие тех предметов, которые мы можем купить в магазине. И если у игрока есть такие предметы - создаём действие «дарения» этих предметов. Когда игрок совершит действие, мы заберем у него тот предмет, который он хочет подарить и выводим диалог благодарности за подарок. К тому же, мы используем команду <span class="em_BLCK">DELACT</span>, которой удаляем действие, указанное после этой команды.
 </p>
 <h5 id="urok-4-nastrojki-formatirovanie">Урок 4. Настройки, Форматирование</h5><p>
 В этом уроке рассмотрим, как сделать наш квест более привлекательным. В первую очередь следует настроить интерфейс так, чтобы в нём не оставалось ничего лишнего, отвлекающего от игры. Если вы сейчас запустите наш пример, то увидите, что мы не используем "поле дополнительного описания" (справа внизу) и "командную строку" (внизу). Чтобы они нам не мешали, их нужно отключить. Делается это следующим образом:
 </p>
 <p>
-Пример ("`7.txt`"):
+Пример ("<span class="em_BLCK">7.txt</span>"):
 </p>
 <div class="Monokai-Code">
 <span class="Monokai-StartLoc">#&nbsp;Начало</span><br/>
@@ -373,13 +373,13 @@
 -</span><br/>
 </div>
 <p>
-Мы вызываем инструкцию `SHOWSTAT` с параметром `0` для того, чтобы отключить "поле дополнительного описания". Если бы мы передали `1` (или число отличное от `0`), то поле было бы видимым. То же самое и с `SHOWINPUT` (командная строка). Так же мы можем отключить инвентарь - `SHOWOBJS`, и список действий - `SHOWACTS`.
+Мы вызываем инструкцию <span class="em_BLCK">SHOWSTAT</span> с параметром <span class="em_BLCK">0</span> для того, чтобы отключить "поле дополнительного описания". Если бы мы передали <span class="em_BLCK">1</span> (или число отличное от <span class="em_BLCK">0</span>), то поле было бы видимым. То же самое и с <span class="em_BLCK">SHOWINPUT</span> (командная строка). Так же мы можем отключить инвентарь - <span class="em_BLCK">SHOWOBJS</span>, и список действий - <span class="em_BLCK">SHOWACTS</span>.
 </p>
 <p>
 Теперь нам нужно сделать так, чтобы наш текст был более подходящим для нашего квеста. Для этого есть 4 переменные.
 </p>
 <p>
-Пример ("`8.txt`"):
+Пример ("<span class="em_BLCK">8.txt</span>"):
 </p>
 <div class="Monokai-Code">
 <span class="Monokai-StartLoc">#&nbsp;Начало</span><br/>
@@ -391,28 +391,28 @@
 -</span><br/>
 </div>
 <p>
-Цвет в QSP задаётся с помощью функции `RGB`, в которую мы передаём значения его отдельных компонент - красного (Red), зелёного (Green) и синего (Blue). Отсюда и название функции.
+Цвет в QSP задаётся с помощью функции <span class="em_BLCK">RGB</span>, в которую мы передаём значения его отдельных компонент - красного (Red), зелёного (Green) и синего (Blue). Отсюда и название функции.
 </p>
 <p>
-Если вы не знакомы с таким способом задания цветов, то вам может помочь программа MS Paint, которая входит в стандартную поставку Windows. Для этого запустите программу, щёлкните два раза по любому цвету в палитре (внизу) и затем нажмите кнопку "Определить цвет". Появится расширенная палитра, на которой можно выбрать нужный вам цвет. Под палитрой снизу будет 3 поля (Красный, Зелёный, Синий), значениями из этих полей вам и нужно заполнить функцию `RGB`.
+Если вы не знакомы с таким способом задания цветов, то вам может помочь программа MS Paint, которая входит в стандартную поставку Windows. Для этого запустите программу, щёлкните два раза по любому цвету в палитре (внизу) и затем нажмите кнопку "Определить цвет". Появится расширенная палитра, на которой можно выбрать нужный вам цвет. Под палитрой снизу будет 3 поля (Красный, Зелёный, Синий), значениями из этих полей вам и нужно заполнить функцию <span class="em_BLCK">RGB</span>.
 </p>
 <p>
-Переменная `BCOLOR` устанавливает цвет заднего фона, `FCOLOR` - цвет текста.
+Переменная <span class="em_BLCK">BCOLOR</span> устанавливает цвет заднего фона, <span class="em_BLCK">FCOLOR</span> - цвет текста.
 </p>
 <p>
-Следует учесть, что если присвоить переменной цвета значение `0` (к примеру, `BCOLOR = 0`), то проигрыватель квестов заменит указанный цвет на цвет из настроек самого плеера, т.е. цвет фона `0` это прозрачный цвет.
+Следует учесть, что если присвоить переменной цвета значение <span class="em_BLCK">0</span> (к примеру, <span class="em_BLCK">BCOLOR = 0</span>), то проигрыватель квестов заменит указанный цвет на цвет из настроек самого плеера, т.е. цвет фона <span class="em_BLCK">0</span> это прозрачный цвет.
 </p>
 <p>
-Чтобы изменить размер текста, используется переменная `FSIZE`, шрифт текста задётся строковой переменной `$FNAME`.
+Чтобы изменить размер текста, используется переменная <span class="em_BLCK">FSIZE</span>, шрифт текста задётся строковой переменной <span class="em_BLCK">$FNAME</span>.
 </p>
 <p>
 Многие игроки не любят, когда автор задаёт свои визуальные параметры для текстовых квестов. "На вкус и цвет фломастеры разные", кто-то привык читать зелёные буквы на чёрном фоне, а кто-то предпочитает классический вариант чёрного на белом. У кого-то большой монитор - маленькие буквы читать на нём неудобно и т.д. Проигрыватель квестов QSP позволяет настроить такие параметры индивидуально для каждого игрока, но только в том случае, если автор игры не заменил их на свои. Поэтому рекомендуется с осторожностью менять эти настройки для вашего квеста.
 </p>
 <p>
-Есть ещё один, способ сделать ваш текст внешне более привлекательным. Использование HTML. Язык гипертекстовой разметки документов очень хорошо подходит для этой цели. С помощью него можно не только задавать цвет, размер и шрифт текста, но и делать это для отдельных слов, фраз или даже букв, а так же позиционировать текст на экране. Например, можно расположить заголовки по центру строки, или справа. Для этого нужно переменной `USEHTML` задать значение `1` (или любое отличное от `0`). В следующем примере я приведу лишь небольшую часть возможностей, которых, впрочем, будет достаточно для оформления игры.
+Есть ещё один, способ сделать ваш текст внешне более привлекательным. Использование HTML. Язык гипертекстовой разметки документов очень хорошо подходит для этой цели. С помощью него можно не только задавать цвет, размер и шрифт текста, но и делать это для отдельных слов, фраз или даже букв, а так же позиционировать текст на экране. Например, можно расположить заголовки по центру строки, или справа. Для этого нужно переменной <span class="em_BLCK">USEHTML</span> задать значение <span class="em_BLCK">1</span> (или любое отличное от <span class="em_BLCK">0</span>). В следующем примере я приведу лишь небольшую часть возможностей, которых, впрочем, будет достаточно для оформления игры.
 </p>
 <p>
-Пример ("`9.txt`"):
+Пример ("<span class="em_BLCK">9.txt</span>"):
 </p>
 <div class="Monokai-Code">
 <span class="Monokai-StartLoc">#&nbsp;Начало</span><br/>
@@ -512,7 +512,7 @@
 -</span><br/>
 </div>
 <p>
-Автор: `ELMORTEM`
+Автор: <strong>ELMORTEM</strong>
 </p>
 <p>
 14.04.2010 15: 16
