--- a/informarch/rasprostranjaemaja_standalon_sborka_na_klassike_0031.html
+++ b/informarch/rasprostranjaemaja_standalon_sborka_na_klassike_0031.html
@@ -23,7 +23,7 @@
 	Можно ли сделать игру так, чтобы играть без плеера?
 </p>
 <p>
-	Как сделать пакетный файл запуска, чтобы игрок тыкал иконку `start` и сразу начинал играть?
+	Как сделать пакетный файл запуска, чтобы игрок тыкал иконку <span class="em_BLCK">start</span> и сразу начинал играть?
 </p>
 <p>
 О:
