--- a/informarch/tjanem_karty_iz_kollody_0022.html
+++ b/informarch/tjanem_karty_iz_kollody_0022.html
@@ -67,7 +67,7 @@ i&nbsp;<span class="Monokai-Operator">=</span>&nbsp;<span class="Monokai-Numeric
 <a href="https://qsp.org/attachments/pullcard.qsp" style="text-decoration:none;" class="emFOLD">pullcard.qsp</a>
 </p>
 <p>
-Автор: `NEX`
+Автор: <span class="em_BLCK">NEX</span>
 </p>
 <p>
 29.05.2011 20:05
