--- a/informarch/txt2gam_for_linux_0013.html
+++ b/informarch/txt2gam_for_linux_0013.html
@@ -20,7 +20,7 @@
 Исходники: <a href="https://github.com/QSPFoundation/txt2gam" style="text-decoration:none;" class="emFOLD">github/QSPFoundation/txt2gam</a>
 </p>
 <p>
-`Порядок сборки:`
+<strong>Порядок сборки:</strong>
 </p>
 <ol>
 <li>Скачиваем все файлы с расширениями <em>.c и </em>.h и помещаем их в один каталог.</li>
