--- a/informarch/uchebnik_po_qsp_dlja_redaktora_qgen_0004.html
+++ b/informarch/uchebnik_po_qsp_dlja_redaktora_qgen_0004.html
@@ -95,7 +95,7 @@
 <span class="Monokai-Operator">showinput</span>&nbsp;<span class="Monokai-Numeric">0</span><br/>
 </div>
 <img src="https://i.ibb.co/51TmpqZ/tut1-11.png" alt="AleksVersus-GAM-RUS" class="em_IMG" /><p>
-`"SHOWSTAT 0"` означает, что мы отключаем "окно дополнительных описаний", `"SHOWINPUT 0"` - отключаем "поле ввода". В наших уроках они использоваться не будут, и поэтому для нашей игры их стоит отключить.
+<span class="em_BLCK">"SHOWSTAT 0"</span> означает, что мы отключаем "окно дополнительных описаний", <span class="em_BLCK">"SHOWINPUT 0"</span> - отключаем "поле ввода". В наших уроках они использоваться не будут, и поэтому для нашей игры их стоит отключить.
 </p>
 <p>
 Запускаем. Смотрим, что изменилось:
@@ -221,7 +221,7 @@
 Переменные - это "память" игры.
 </p>
 <p>
-В переменных хранится информация обо всем, что изменяется в процессе игры. Автор называет переменные так, как ему удобно, главное следить за тем, чтобы в имени переменной не было других знаков, кроме букв, цифр и символов подчеркивания. Пробелы в имени не допускаются, для разделения пользуйтесь подчеркиванием, вот так: `моя_первая_переменная`. Если в начале имени стоит знак "$", значит, в переменной хранится текст, если нет, то в ней хранится число.
+В переменных хранится информация обо всем, что изменяется в процессе игры. Автор называет переменные так, как ему удобно, главное следить за тем, чтобы в имени переменной не было других знаков, кроме букв, цифр и символов подчеркивания. Пробелы в имени не допускаются, для разделения пользуйтесь подчеркиванием, вот так: <span class="em_BLCK">моя_первая_переменная</span>. Если в начале имени стоит знак "$", значит, в переменной хранится текст, если нет, то в ней хранится число.
 </p>
 <p>
 Основные действия с переменными, это запись, чтение и вывод.
@@ -287,7 +287,7 @@ $вопрос&nbsp;<span class="Monokai-Operator">=</span>&nbsp;$строка&nb
 Начнем применять переменные на практике. Создайте новую игру, назовите ее "Planet Master".
 </p>
 <p>
-`Локация "Начало"`
+<span class="em_BLCK">Локация "Начало"</span>
 </p>
 <p>
 Создайте локацию "Начало", в описании напишите "Создайте свою планету и сможете управлять ей в меру своих скромных возможностей."
@@ -304,7 +304,7 @@ $вопрос&nbsp;<span class="Monokai-Operator">=</span>&nbsp;$строка&nb
 Создайте действие "Создать планету" с переходом на локацию "СоздатьПланету".
 </p>
 <p>
-`Локация "СоздатьПланету"`
+<span class="em_BLCK">Локация "СоздатьПланету"</span>
 </p>
 <p>
 Создайте локацию "СоздатьПланету". В коде локации пишем
@@ -330,7 +330,7 @@ $Имя&nbsp;<span class="Monokai-Operator">=</span>&nbsp;<span class="Monokai-F
 Создайте действие "Управлять планетой" с переходом на локацию "Планета".
 </p>
 <p>
-`Локация "Планета"`
+<span class="em_BLCK">Локация "Планета"</span>
 </p>
 <p>
 Создайте локацию "Планета". В описании локации пишем
@@ -340,7 +340,7 @@ $Имя&nbsp;<span class="Monokai-Operator">=</span>&nbsp;<span class="Monokai-F
 <br/>Температура&nbsp;на&nbsp;планете:&nbsp;&lt;&lt;Температура&gt;&gt;&nbsp;градусов.
 </div>
 <p>
-При выводе на экран, вместо `<<$Имя>>` и `<<Температура>>` будут подставлены значения указанных переменных.
+При выводе на экран, вместо <span class="em_BLCK"><<$Имя>></span> и <span class="em_BLCK"><<Температура>></span> будут подставлены значения указанных переменных.
 </p>
 <p>
 Нам нужно, чтобы игрок мог изменить температуру на планете. Для этого сделаем несколько действий, в которых будет меняться переменная Температура.
@@ -359,7 +359,7 @@ $Имя&nbsp;<span class="Monokai-Operator">=</span>&nbsp;<span class="Monokai-F
 В первой строке, мы увеличиваем на 10 единиц значение переменной Температура. Если температура планеты была 100 градусов, то при выборе этого действия температура планеты станет 110 градусов, и так далее.
 </p>
 <p>
-Вторая строка задает переход на текущую локацию. `$CURLOC` - специальная функция, которая всегда возвращает имя текущей локации, в нашем случае это локация "Планета".
+Вторая строка задает переход на текущую локацию. <span class="em_BLCK">$CURLOC</span> - специальная функция, которая всегда возвращает имя текущей локации, в нашем случае это локация "Планета".
 </p>
 <p>
 Зачем же нам "переходить" на локацию, на которой мы и так уже находимся? Это нужно для того, чтобы обновить текст описания локации. Переменная Температура была изменена, но изменения в описании появятся только при "входе" на локацию, поэтому мы должны явно задать переход.
@@ -400,10 +400,10 @@ $Имя&nbsp;<span class="Monokai-Operator">=</span>&nbsp;<span class="Monokai-F
 <span class="Monokai-Koperator">END</span><br/>
 </div>
 <p>
-Если `условие` выполняется, то будет выполнено `действие1`, если нет - `действие2`.
+Если <span class="em_BLCK">условие</span> выполняется, то будет выполнено <span class="em_BLCK">действие1</span>, если нет - <span class="em_BLCK">действие2</span>.
 </p>
 <p>
-Когда нам требуется задать только `действие1`, запись будет короче:
+Когда нам требуется задать только <span class="em_BLCK">действие1</span>, запись будет короче:
 </p>
 <div class="Monokai-Code">
 <span class="Monokai-Koperator">IF</span>&nbsp;условие&nbsp;<span class="Monokai-Operator">:</span><br/>
@@ -414,7 +414,7 @@ $Имя&nbsp;<span class="Monokai-Operator">=</span>&nbsp;<span class="Monokai-F
 Напишем игру, в которой прохождение будет зависеть от того, побывал ли игрок на некоторой локации.
 </p>
 <p>
-`Локация "Начало"`
+<span class="em_BLCK">Локация "Начало"</span>
 </p>
 <p>
 Создайте локацию "Начало", в описании напишите "Игра про космос."
@@ -432,7 +432,7 @@ $Имя&nbsp;<span class="Monokai-Operator">=</span>&nbsp;<span class="Monokai-F
 Создайте действие "Играть" с переходом на локацию "Играть".
 </p>
 <p>
-`Локация "Играть"`
+<span class="em_BLCK">Локация "Играть"</span>
 </p>
 <p>
 Создайте локацию "Играть". В описании пишем: "Вы долго исследовали пояс астероидов и настала пора возвращаться на Землю."
@@ -454,7 +454,7 @@ $Имя&nbsp;<span class="Monokai-Operator">=</span>&nbsp;<span class="Monokai-F
 Рассмотрим подробно.
 </p>
 <p>
-Мы проверяем значение переменной `Курс_Полёта`. Условие "Курс_Полёта = 1" означает "Значение переменной Курс_Полёта должно равняться 1". Если значение равняется `1`, то при нажатии этого действия будет переход на локацию "Победа", иначе - переход на локацию "Проигрыш".
+Мы проверяем значение переменной <span class="em_BLCK">Курс_Полёта</span>. Условие "Курс_Полёта = 1" означает "Значение переменной Курс_Полёта должно равняться 1". Если значение равняется <span class="em_BLCK">1</span>, то при нажатии этого действия будет переход на локацию "Победа", иначе - переход на локацию "Проигрыш".
 </p>
 <p>
 Локация "Диспетчер"
@@ -480,13 +480,13 @@ $Имя&nbsp;<span class="Monokai-Operator">=</span>&nbsp;<span class="Monokai-F
 Создайте действие "Завершить сеанс связи" с переходом на локацию "Играть".
 </p>
 <p>
-`Локация "Победа"`
+<span class="em_BLCK">Локация "Победа"</span>
 </p>
 <p>
 Создайте локацию "Победа". В описании локации пишем: "Вы благополучно долетели до Земли. Хорошо, что вы связались с диспетчером и получили у него курс полёта."
 </p>
 <p>
-`Локация "Проигрыш"`
+<span class="em_BLCK">Локация "Проигрыш"</span>
 </p>
 <p>
 Создайте локацию "Проигрыш". В описании пишем: "Лететь без курса полёта через пояс астероидов - чистой воды самоубийство. Вам не повезло и один из астероидов протаранил ваш корабль, так что на Земле вас так и не дождались."
@@ -504,7 +504,7 @@ $Имя&nbsp;<span class="Monokai-Operator">=</span>&nbsp;<span class="Monokai-F
 В текстовых играх часто применяются предметы. Для того, чтобы игрок всегда знал, какие предметы у него с собой, в QSP есть специальное окно инвентаря(с заголовком "Предметы"). Когда игрок берет предмет, тот появляется в инвентаре.
 </p>
 <p>
-Для того, чтобы добавить предмет в инвентарь, используется оператор `ADDOBJ`, для того, чтобы удалить предмет из инвентаря, используется оператор `DELOBJ`.
+Для того, чтобы добавить предмет в инвентарь, используется оператор <span class="em_BLCK">ADDOBJ</span>, для того, чтобы удалить предмет из инвентаря, используется оператор <span class="em_BLCK">DELOBJ</span>.
 </p>
 <p>
 Записывается так:
@@ -610,13 +610,13 @@ $Имя&nbsp;<span class="Monokai-Operator">=</span>&nbsp;<span class="Monokai-F
 Основной способ сделать "применение" предмета в игре - создать действие, которое будет доступно только при наличии предмета в инвентаре. Рассмотрим на примере.
 </p>
 <p>
-`Локация "Начало"`
+<span class="em_BLCK">Локация "Начало"</span>
 </p>
 <p>
 Создайте локацию "Начало", с описанием "Игра про Дверь." и действием с переходом на локацию "Комната". Отключите строку ввода.
 </p>
 <p>
-`Локация "Комната"`
+<span class="em_BLCK">Локация "Комната"</span>
 </p>
 <p>
 Создайте локацию "Комната". В описании пишем: "Вы стоите в центре комнаты, заполненной грудами ненужного хлама. У дальней стены вы видите дверь."
@@ -651,7 +651,7 @@ $Имя&nbsp;<span class="Monokai-Operator">=</span>&nbsp;<span class="Monokai-F
 PL - оператор вывода текста в окно дополнительного описания. При переходах между локациями дополнительное описание не очищается, поэтому в него удобно записывать результаты совершенных действий.
 </p>
 <p>
-`Локация "Дверь"`
+<span class="em_BLCK">Локация "Дверь"</span>
 </p>
 <p>
 Создайте локацию "Дверь". В описании пишем: "Дверь заперта."
@@ -683,7 +683,7 @@ PL - оператор вывода текста в окно дополнител
 После того, как мы открыли дверь, ключ нам больше не нужен, поэтому мы удаляем его из инвентаря.
 </p>
 <p>
-`Локация "Победа"`
+<span class="em_BLCK">Локация "Победа"</span>
 </p>
 <p>
 Создайте локацию "Победа" с описанием "Вы выбрались из комнаты."
@@ -695,10 +695,10 @@ PL - оператор вывода текста в окно дополнител
 Итог: в этом уроке мы научились применять предметы в игре.
 </p>
 <p>
-`Теперь вы овладели всеми основными приемами разработки игр на QSP, и уже можете начинать писать свои игры.`
+<span class="em_BLCK">Теперь вы овладели всеми основными приемами разработки игр на QSP, и уже можете начинать писать свои игры.</span>
 </p>
 <hr class="em_HR" /><p>
-Автор: `NEX`
+Автор: <strong>NEX</strong>
 </p>
 <p>
 27.02.2009 10:41</p>
