--- a/informarch/zakladki_0030.html
+++ b/informarch/zakladki_0030.html
@@ -67,7 +67,7 @@ QSP-Анализатор — программа для анализа кода
 Пакет для работы с текстовым и бинарным форматом qsp от Werewolf. Если кому-то захочется поиграться - там специально сделано что IO операции не часть пакета (чтобы его можно было в браузере(qspider) и в nodejs использовать), поэтому четние/запись файла нужно делать средствами nodejs.
 </p>
 <h6 id="qsp---txt">qsp -> txt</h6><p>
-Утилита `Werewolf`а для конвертирования QSP-файла в текстовый файл формата TXT2GAM
+Утилита <strong>Werewolf</strong>`а для конвертирования QSP-файла в текстовый файл формата TXT2GAM
 </p>
 <p>
  <a href="https://codepen.io/srg-kostyrko/full/QWqdwxv" style="text-decoration:none;" class="emFOLD">codepen.io/qsp@txt2gam-converster</a>
