--- a/informarch/aeroqsp_0024.html
+++ b/informarch/aeroqsp_0024.html
@@ -17,7 +17,7 @@
             <!-- body start -->
 <div style="display:flex;justify-content:space-between;"><div><a href="https://aleksversus.github.io/howdo_faq/informarch/obnovlenie_do_5.7.0_0023.html" class="emHREFTT">&lt; Назад, к странице 37</a></div><div><a href="https://aleksversus.github.io/howdo_faq/informarch/aeroqsp_instr_0025.html" class="emHREFTT">Вперёд, к странице 39 &gt;</a></div></div>
 <h6 id="informarch_aeroqsp_wtfit">AeroQSP</h6><p>
-`AeroQSP` - специальная версия плеера QSP на технологии Flash, позволяющая играть и локально, и в браузере.
+<span class="em_BLCK">AeroQSP</span> - специальная версия плеера QSP на технологии Flash, позволяющая играть и локально, и в браузере.
 </p>
 <p>
 Отличия от <a href="https://qsp.org/index.php?option=com_content&view=article&id=64&Itemid=56" style="text-decoration:none;" class="emFOLD">классической версии</a> плеера:
@@ -51,7 +51,7 @@
 Скриншот из игры "Город туманов":
 </p>
 <img src="https://i.ibb.co/GFhTndG/cityofmist.png" alt="AleksVersus-GAM-RUS" class="em_IMG" /><p>
-Автор: `BYTE`
+Автор: <span class="em_BLCK">BYTE</span>
 </p>
 <p>
 30.05.2011 22:21
