--- a/informarch/analizator_koda_qsp_0006.html
+++ b/informarch/analizator_koda_qsp_0006.html
@@ -20,9 +20,9 @@
 Анализатор выполняет проверку на двух уровнях:
 </p>
 <ol>
-<li>Проверка синтаксиса. Все ошибки, которые можно однозначно определить по соответствию синтаксическим правилам языка QSP.	`Пример:` незакрытые многострочные операторы, незакрытые скобки, неверное количество аргументов функции и т.д.
+<li>Проверка синтаксиса. Все ошибки, которые можно однозначно определить по соответствию синтаксическим правилам языка QSP.	<span class="em_BLCK">Пример:</span> незакрытые многострочные операторы, незакрытые скобки, неверное количество аргументов функции и т.д.
 </li>
-<li>Предупреждения. Предположения об ошибках, основанные на анализе структуры игры - переменные, локации, предметы, действия.	`Пример:` локации, на которые нет перехода, использование неинициализированных переменных, попытка удалить предмет, который нигде не добавляется, и т.д.
+<li>Предупреждения. Предположения об ошибках, основанные на анализе структуры игры - переменные, локации, предметы, действия.	<span class="em_BLCK">Пример:</span> локации, на которые нет перехода, использование неинициализированных переменных, попытка удалить предмет, который нигде не добавляется, и т.д.
 </li>
 </ol>
 <p>
@@ -38,7 +38,7 @@
 Игра -> Экспорт -> Текстовый файл формата TXT2GAM.
 </p>
 <p>
-<a href="https://code.google.com/archive/p/qsp-analyser/downloads" style="text-decoration:none;" class="emFOLD">`Скачать анализатор со страницы релизов`</a>
+<a href="https://code.google.com/archive/p/qsp-analyser/downloads" style="text-decoration:none;" class="emFOLD"><span class="em_BLCK">Скачать анализатор со страницы релизов</span></a>
 </p>
 <h5 id="eksport-tekstovyh-konstant-v-csv-fajl-i-perevod">Экспорт текстовых констант в CSV-файл и перевод</h5><p>
 Сделано для удобства перевода игры на другой язык. Работает так: открываем утилиту, выбираем исходный код квеста. Открываем вкладку "Конвертация". Жмем "Экспорт в CSV". Если в исходном файле нет ошибок, генерируется CSV-файл, в котором записана таблица из четырех колонок. В первой - номер строки таблицы и название локации, из которой взят текст. Во второй - исходный текст. В третьей - нужно вписать перевод. В четвертой можно писать любые комментарии, ее содержимое не учитывается.
