--- a/informarch/avtomatnoe_programmirovanie_0009.html
+++ b/informarch/avtomatnoe_programmirovanie_0009.html
@@ -26,10 +26,10 @@
 Какие могут быть варианты решения?
 </p>
 <p>
-`Вариант 1.` В редакторе QSP нет ограничений по числу локаций, поэтому можно создать несколько вариантов одной и той же локаций на каждый новый случай. Получится список «комната1», «комната2», «комната3» и т.д. В каждой локации можно добавить уникальное действие, нового персонажа  или определенные условие при посещении.
+<span class="em_BLCK">Вариант 1.</span> В редакторе QSP нет ограничений по числу локаций, поэтому можно создать несколько вариантов одной и той же локаций на каждый новый случай. Получится список «комната1», «комната2», «комната3» и т.д. В каждой локации можно добавить уникальное действие, нового персонажа  или определенные условие при посещении.
 </p>
 <p>
-`Вариант 2.` В одно локации «комната» в условии при посещении писать программный код учитывающий все возможные варианты которые могут происходить в локации. За частую, появляется много условий, и логическая составляющая кода усложняется на столько, что найти ошибку становиться очень проблематично.
+<span class="em_BLCK">Вариант 2.</span> В одно локации «комната» в условии при посещении писать программный код учитывающий все возможные варианты которые могут происходить в локации. За частую, появляется много условий, и логическая составляющая кода усложняется на столько, что найти ошибку становиться очень проблематично.
 </p>
 <p>
 У вас есть свое решение? Обязательно поделитесь. 😊
@@ -89,16 +89,16 @@
 Проведем аналогии с QSP терминологией:
 </p>
 <p>
-`Табл. Автоматы` – Перечень наших локаций то что мы видим в левой части QSP редактора.
+<span class="em_BLCK">Табл. Автоматы</span> – Перечень наших локаций то что мы видим в левой части QSP редактора.
 </p>
 <p>
-`Табл. Описание автомата` – Описание на локации обратите внимание, описание зависит от состояния, т.е. у одной локации может быть несколько описаний локации.
+<span class="em_BLCK">Табл. Описание автомата</span> – Описание на локации обратите внимание, описание зависит от состояния, т.е. у одной локации может быть несколько описаний локации.
 </p>
 <p>
-`Табл. Описание состояния` – Состояния локации, где могу быть свой код при посещении см Процедура, Обратите внимание, переходы (переходы между состояниями или локациями или ещё точнее между стояниями локаций) в каждом состоянии индивидуальны.
+<span class="em_BLCK">Табл. Описание состояния</span> – Состояния локации, где могу быть свой код при посещении см Процедура, Обратите внимание, переходы (переходы между состояниями или локациями или ещё точнее между стояниями локаций) в каждом состоянии индивидуальны.
 </p>
 <p>
-`Табл. Описаний переходов` – Наши действия с переходом goto «новая локация». Здесь могут быть условия перехода на картинке изображено блоком Булева функция, а так же номер нового состояние локации куда мы перейдем по выбора этого действия.
+<span class="em_BLCK">Табл. Описаний переходов</span> – Наши действия с переходом goto «новая локация». Здесь могут быть условия перехода на картинке изображено блоком Булева функция, а так же номер нового состояние локации куда мы перейдем по выбора этого действия.
 </p>
 <p>
 Пока выглядит немного запутано, но рассмотрим программный код, написанный по этому методу на примере игры «Дом пустоты».
@@ -107,7 +107,7 @@
 В левой части мы видим перечень локаций. Каждая локация это наш автомат, который может иметь несколько состояний.
 </p>
 <p>
-В окне выполнить при посещении мы видим некие блоки которые начинаются комментарием, затем идет `IF`, далее тело блока, и заканчивается `END`.
+В окне выполнить при посещении мы видим некие блоки которые начинаются комментарием, затем идет <span class="em_BLCK">IF</span>, далее тело блока, и заканчивается <span class="em_BLCK">END</span>.
 </p>
 <p>
 Так как локация спальня у нас одна, по сюжету ГГ может посещать её несколько раз, то в окне «Выполнить при посещении» пишем шаблон:
@@ -147,10 +147,10 @@
 <span class="Monokai-Koperator">end</span><br/>
 </div>
 <p>
-		А ниже в списке действий на локации всегда есть возможность выйти в коридор безусловным переходом `gt «коридор»`.
+		А ниже в списке действий на локации всегда есть возможность выйти в коридор безусловным переходом <span class="em_BLCK">gt «коридор»</span>.
 </p>
 <p>
-		В локации коридор мы попадает сразу в блок- состояния коридора со значением `0`
+		В локации коридор мы попадает сразу в блок- состояния коридора со значением <span class="em_BLCK">0</span>
 </p>
 <div class="Monokai-Code">
 <span class="Monokai-Koperator">IF</span>&nbsp;kor<span class="Monokai-Operator">=</span><span class="Monokai-Numeric">0</span><span class="Monokai-Operator">:</span>&nbsp;<span class="Monokai-Operator">&amp;&nbsp;</span><span class="Monokai-Comment">!&nbsp;-&nbsp;текущее&nbsp;состояние&nbsp;локации&nbsp;коридор</span><br/>
@@ -197,7 +197,7 @@ URL граф игры "Дом пустоты" для программы Explain 
 URL игры "Дом пустоты" http://day0.narod.ru/stat/b26.qsp
 </p>
 <p>
-Автор: `HIMAN`
+Автор: <strong>HIMAN</strong>
 </p>
 <p>
 11.09.2011 21:06
