--- a/informarch/dopolnenie_inventarja_0018.html
+++ b/informarch/dopolnenie_inventarja_0018.html
@@ -17,7 +17,7 @@
             <!-- body start -->
 <div style="display:flex;justify-content:space-between;"><div><a href="https://aleksversus.github.io/howdo_faq/informarch/ispol_zovanie_massivov_0017.html" class="emHREFTT">&lt; Назад, к странице 19</a></div><div><a href="https://aleksversus.github.io/howdo_faq/informarch/dejstvie_po_usloviju_0019.html" class="emHREFTT">Вперёд, к странице 21 &gt;</a></div></div>
 <h5 id="informarch_ia_lib_ntropy">Библиотечка дополняющая инвентарь 0.76</h5><p>
-Библиотечка для работы с инвентарём (`inventory_advanced.qsp`) + простой пример для демонстрации возможностей (`invadv_test.qsp`).
+Библиотечка для работы с инвентарём (<span class="em_BLCK">inventory_advanced.qsp</span>) + простой пример для демонстрации возможностей (<span class="em_BLCK">invadv_test.qsp</span>).
 </p>
 <p>
 Вы можете добавлять и удалять предметы (деньги или еще что-то), при этом их количество будет верно отображаться в инвентаре. Например, добавили 15 шишек, а пишется "шишка (15 шт.)", заботу об этом берёт библиотечка.
@@ -26,19 +26,19 @@
 Вы можете добавлять предметы в обход функций библиотечки, они не помешают её работе.
 </p>
 <p>
-Для получения описания функций библиотечки откройте её файл (`inventory_advanced.qsp`) в QSP-плеере.
+Для получения описания функций библиотечки откройте её файл (<span class="em_BLCK">inventory_advanced.qsp</span>) в QSP-плеере.
 </p>
 <h5 id="opisanie">Описание</h5><p>
-Локации могут вызываться как функции, так и как процедуры, например вызов func('ia_obj_count', 'шишки') возвращает количество шишек в инвентаре, а вызов процедуры gs 'ia_add_obj','шишки' добавляет одну шишку в инвентарь.
+Локации могут вызываться как функции, так и как процедуры, например вызов func('ia_obj_count', 'шишки') возвращает количество шишек в инвентаре, а вызов процедуры <span class="em_BLCK">gs 'ia_add_obj','шишки</span>' добавляет одну шишку в инвентарь.
 </p>
 <ul>
-<li>`ia_add_obj, <предмет>, [<тип предмета>]`    Функция для добавления предмета в инвентарь или увеличения счетчика на 1, тип предмета задает сокращение после количества, например "руб." или "шт."
+<li><span class="em_BLCK">ia_add_obj, <предмет>, [<тип предмета>]</span>    Функция для добавления предмета в инвентарь или увеличения счетчика на 1, тип предмета задает сокращение после количества, например "руб." или "шт."
 </li>
-<li>`ia_del_obj, <предмет>, [<тип предмета>]`    Функция уменьшения счетчика на 1 или для удаления предмета из инвентаря (если количество равно нулю), тип предмета задает сокращение после количества, например "руб." или "шт."
+<li><span class="em_BLCK">ia_del_obj, <предмет>, [<тип предмета>]</span>    Функция уменьшения счетчика на 1 или для удаления предмета из инвентаря (если количество равно нулю), тип предмета задает сокращение после количества, например "руб." или "шт."
 </li>
-<li>`ia_obj_count, <предмет>, [<количество>]`    Функция для получения количества предметов или установки точного значения, если задано количество.
+<li><span class="em_BLCK">ia_obj_count, <предмет>, [<количество>]</span>    Функция для получения количества предметов или установки точного значения, если задано количество.
 </li>
-<li>`ia_obj_type, <предмет>`    Функция для получения типа предмета (сокращение указываемое после количества, например "руб." или "шт.") или задание этого сокращения.
+<li><span class="em_BLCK">ia_obj_type, <предмет></span>    Функция для получения типа предмета (сокращение указываемое после количества, например "руб." или "шт.") или задание этого сокращения.
 </li>
 </ul>
 <p>
@@ -48,7 +48,7 @@
 Ntropy ( ...@yandex.ru) 18.06.2009
 </p>
 <p>
-Автор: `NTROPY`
+Автор: <strong>NTROPY</strong>
 </p>
 <p>
 02.04.2010 12:50
