--- a/informarch/kak_podkljuchit__svoj_shrift_0033.html
+++ b/informarch/kak_podkljuchit__svoj_shrift_0033.html
@@ -23,7 +23,7 @@
 О:
 </p>
 <p>
-Это делается через CSS. Используйте правило `@font-face`, чтобы импортировать шрифт в игру.
+Это делается через CSS. Используйте правило <span class="em_BLCK">@font-face</span>, чтобы импортировать шрифт в игру.
 </p>
 <p>
 В файле "game.css" вашего шаблона пропишите подобное правило:
@@ -43,7 +43,7 @@
 }<br/>
 </div>
 <p>
-`src:url();` — это ссылка на файл шрифта. Ваш файл шрифта должен лежать на уровне файла "game.css" вашего шаблона, или во вложенной папке. Соответственно указываем относительный путь — относительно файла "game.css".
+<span class="em_BLCK">src:url();</span> — это ссылка на файл шрифта. Ваш файл шрифта должен лежать на уровне файла "game.css" вашего шаблона, или во вложенной папке. Соответственно указываем относительный путь — относительно файла "game.css".
 </p>
 <p>
 P.S.: К сожалению, данный способ по факту работает только в стандалон-сборке. А ещё придётся поэкспериментировать с форматом шрифта, так как замечено, что Навигатор не справляется с truetype-шрифтами, но неплохо ест opentype ttf и woff. Поэтому, если вы заметили, что ваш шрифт не работает в Навигаторе, попробуйте сконвертировать его в другие форматы и подключить их.
