--- a/informarch/ne_rabotaet_atribut_v_aeroqsp_0044.html
+++ b/informarch/ne_rabotaet_atribut_v_aeroqsp_0044.html
@@ -20,7 +20,7 @@
 В: В AeroQSP не работает атрибут.
 </p>
 <p>
-Например, `border=1`, `bgcolor=#557700`.
+Например, <span class="em_BLCK">border=1</span>, <span class="em_BLCK">bgcolor=#557700</span>.
 </p>
 <p>
 О:
@@ -29,7 +29,7 @@
 AeroQSP ориентирован на работу со стилями, поэтому для стилизации различных элементов пользуйтесь возможностями CSS.
 </p>
 <p>
-Собственную таблицу стилей можно вписать в переменную `$STYLESHEET`. Вот пример из игры "Один в снегах" от `Lisichk`и:
+Собственную таблицу стилей можно вписать в переменную <span class="em_BLCK">$STYLESHEET</span>. Вот пример из игры "Один в снегах" от <strong>Lisichk</strong>`и:
 </p>
 <div class="Monokai-Code">
 $<span class="Monokai-TagName">STYLESHEET</span>='<br/>
@@ -73,7 +73,7 @@ $<span class="Monokai-TagName">STYLESHEET</span>='<br/>
 &nbsp;&nbsp;&nbsp;&nbsp;}'<br/>
 </div>
 <p>
-Стили для отдельного элемента можно прописать в атрибуте `style`:
+Стили для отдельного элемента можно прописать в атрибуте <span class="em_BLCK">style</span>:
 </p>
 <div class="Monokai-Code">
 <span class="Monokai-Operator">*</span><span class="Monokai-Operator">p</span>&nbsp;<span class="Monokai-String">"&lt;div&nbsp;style='color:#333333;width:350px;border:12;'&gt;Текст&nbsp;внутри&nbsp;блока&lt;/div&gt;"</span><br/>
