--- a/informarch/obzory_qsp-compo_2010_0029.html
+++ b/informarch/obzory_qsp-compo_2010_0029.html
@@ -25,7 +25,7 @@
 <p>
 Часть обзоров содержит спойлеры, особенно об этом предупреждает uux.
 </p>
-<h6 id="obzory-ajenty">Обзоры `Ajent`ы</h6><p>
+<h6 id="obzory-ajenty">Обзоры Ajent`ы</h6><p>
 <a href="https://qsp.org/index.php?option=com_agora&task=topic&id=49&p=1&Itemid=57#p488" style="text-decoration:none;" class="emFOLD">ссылка</a>
 </p>
 <p>
@@ -58,7 +58,7 @@
 <p>
 Правда, супер!
 </p>
-<h6 id="obzory-yandexxa">Обзоры `Yandexx`а</h6><p>
+<h6 id="obzory-yandexxa">Обзоры Yandexx`а</h6><p>
 <a href="https://qsp.org/index.php?option=com_agora&task=topic&id=49&p=1&Itemid=57#p490" style="text-decoration:none;" class="emFOLD">ссылка</a>
 </p>
 <p>
@@ -92,7 +92,7 @@
 <a href="https://qsp.org/index.php?option=com_agora&task=topic&id=49&p=1&Itemid=57#p494" style="text-decoration:none;" class="emFOLD">ссылка</a>
 </p>
 <p>
-Отыграл в три игры. А высказаться решил о `La Villa Esperance`, а то про неё комментарии какие-то так себе. В игре действительно приходится вроде бы крайне много тупо кликать, но в то же время возможность выбора у игрока есть сразу по двум принципиальным направлениям - по физическому миру (типа, куда пойти?) и по психологическому (наподобие: смириться или бороться?). Напомнило психологические тесты... Я не такой знаток игр, но, по-моему, получилась редкость. 
+Отыграл в три игры. А высказаться решил о <span class="em_BLCK">La Villa Esperance</span>, а то про неё комментарии какие-то так себе. В игре действительно приходится вроде бы крайне много тупо кликать, но в то же время возможность выбора у игрока есть сразу по двум принципиальным направлениям - по физическому миру (типа, куда пойти?) и по психологическому (наподобие: смириться или бороться?). Напомнило психологические тесты... Я не такой знаток игр, но, по-моему, получилась редкость. 
 </p>
 <p>
 Постоянное тупое кликание воспринималось мною как обычная жизненная суета - ведь тоже много времени и сил уходит на скучные заурядные действия. Надеть штаны, снять штаны, надеть штаны, снять штаны... И так каждый день! 
@@ -188,12 +188,12 @@ P.S. А девушку можно было-бы и похоронить
 Вилле с чистой совестью и без оглядки  на иные проекты,(их авторы - не обижайтесь! Если вообще снизойдёте обижаться на моё мнение) ставлю заслуженное (как на мой избалованный взгляд) 5. Личностное, как вы помните, да-да. 
 </p>
 <h6 id="kolobok">Колобок.</h6><p>
-Речь `Narrator`а не слышал по простой причине - QSP.ce не производит звуков. Но и так, на протяжении сюжета, в голове вертелось лишь "Майн гот" с плохеньким русским акцентом. Что тут сказать, кроме "ёкарный бабай"? Мило. Соответствует суровым аксиомам нашего смутного времени всемирного культурного Декаданса. Фух, как загнул - сам не понял. 
+Речь <strong>Narrator</strong>`а не слышал по простой причине - QSP.ce не производит звуков. Но и так, на протяжении сюжета, в голове вертелось лишь "Майн гот" с плохеньким русским акцентом. Что тут сказать, кроме "ёкарный бабай"? Мило. Соответствует суровым аксиомам нашего смутного времени всемирного культурного Декаданса. Фух, как загнул - сам не понял. 
 </p>
 <h6 id="chashka-kofe">Чашка кофе.</h6><p>
 Пока только играю. Кроме "ну-ка, ну-ка..." - сказать пока нечего.
 </p>
-<h6 id="obzory-master-seta">Обзоры `Master Set`а</h6><p>
+<h6 id="obzory-master-seta">Обзоры Master Set`а</h6><p>
 <a href="https://qsp.org/index.php?option=com_agora&task=topic&id=49&p=2&Itemid=57#p552" style="text-decoration:none;" class="emFOLD">ссылка</a>
 </p>
 <p>
@@ -277,17 +277,17 @@ P.S. А девушку можно было-бы и похоронить
 <p>
 Оценка: 5/5
 </p>
-<h6 id="obzory-uuxa">Обзоры `uux`а</h6><p>
+<h6 id="obzory-uuxa">Обзоры <strong>uux</strong>`а</h6><p>
 <a href="https://qsp.org/index.php?option=com_agora&task=topic&id=49&p=3&Itemid=57#p760" style="text-decoration:none;" class="emFOLD">ссылка1</a>, <a href="https://qsp.org/index.php?option=com_agora&task=topic&id=49&p=3&Itemid=57#p776" style="text-decoration:none;" class="emFOLD">ссылка2</a>, <a href="https://qsp.org/index.php?option=com_agora&task=topic&id=49&p=3&Itemid=57#p780" style="text-decoration:none;" class="emFOLD">ссылка3</a>
 </p>
 <p>
 Начинаю потихоньку выкладывать свои обзоры. Пока - три игры (обозрены в том порядке, в каком я в них играл). Оценки - по десятибалльной шкале.
 </p>
 <p>
-`ВНИМАНИЕ!!! Обзоры содержат массовые спойлеры.`
+<span class="em_BLCK">ВНИМАНИЕ!!! Обзоры содержат массовые спойлеры.</span>
 </p>
 <h6 id="kurtuaznaia-ballada-avtor---masterset">Куртуазная баллада, автор - MasterSet</h6><p>
-Эта игра является вторым произведением от `MasterSet`а, с которым я ознакомился. Данная игра является текстовой РПГ. Поскольку до этого я играл в "Хранителя Старграда" того же автора, которая также является текстовой РПГ, то в этом обзоре я поневоле буду их сравнивать между собой. 
+Эта игра является вторым произведением от <strong>MasterSet</strong>`а, с которым я ознакомился. Данная игра является текстовой РПГ. Поскольку до этого я играл в "Хранителя Старграда" того же автора, которая также является текстовой РПГ, то в этом обзоре я поневоле буду их сравнивать между собой. 
 </p>
 <p>
 В отличие от "Хранителя", который навел на меня скуку смертную с первых же ходов, от "Баллады" я получил немало удовольствия (хотя, как я уже не раз говорил, РПГ - не мое). В чем тут дело - не знаю. Возьмем, например, битвы. Вроде бы в "Хранителе" и хитрая боевая система была, требующая определенной тактики, а поди ж ты - в отношении меня все эти ухищрения автора пропали втуне. В "Балладе" же, наоборот, бои (с точки зрения игрока) упрощены донельзя - знай щелкай по ссылкам "Атакуй/защищайся" да читай результаты. Единственное интелелектуальное усилие, которое требуется от игрока - старатся не ввязываться в поединки с врагами, которые заведомо сильнее. И тем не менее мне они доставили удовольствие. Плюс каждый ход сопровождается паузой, в течение которой слышны звуки боя, вопли врагов и т. п. - обычно меня такие вещи раздражают, но почему-то не в данном случае. 
@@ -296,7 +296,7 @@ P.S. А девушку можно было-бы и похоронить
 Я долго размышлял на тему того, каким образом "Балладе" удалось добиться такой популярности среди меня, и, честно говоря, однозначного ответа найти не смог. Вместо него - сплошные мои домыслы. 
 </p>
 <p>
-Видимо, `MasterSet`у удалось добиться такого баланса между сложностью прохождения, разнообразием игрового мира и количеством решаемых в каждый конкретный момент времени задач, который оказался почти идеальным для одного отдельно взятого игрока (меня). От огромных объемов игровых пространств глаза были готовы разбежаться, но автор сразу же позаботился о том, чтобы у меня было, чем заняться. Так я и шел - от задания к заданию, от замка к замку, от турнира к турниру - пока в конце концов не обнаружил с удивлением, что незаметно пролетели пара с гаком часов, а я добился-таки места у Круглого Стола. И пусть (впрочем, в полном соответствии с жанром РПГ) неписи не балуют разнообразием реакций, города тоже несильно отличаются друг от друга, а получаемые задания в подавляющем своем большинстве имеют вид "сходи туда-то, набей харю тому-то" - игра при всех своих больших размерах все-таки не настолько велика, чтобы это стало по-настоящему раздражать. 
+Видимо, <strong>MasterSet</strong>`у удалось добиться такого баланса между сложностью прохождения, разнообразием игрового мира и количеством решаемых в каждый конкретный момент времени задач, который оказался почти идеальным для одного отдельно взятого игрока (меня). От огромных объемов игровых пространств глаза были готовы разбежаться, но автор сразу же позаботился о том, чтобы у меня было, чем заняться. Так я и шел - от задания к заданию, от замка к замку, от турнира к турниру - пока в конце концов не обнаружил с удивлением, что незаметно пролетели пара с гаком часов, а я добился-таки места у Круглого Стола. И пусть (впрочем, в полном соответствии с жанром РПГ) неписи не балуют разнообразием реакций, города тоже несильно отличаются друг от друга, а получаемые задания в подавляющем своем большинстве имеют вид "сходи туда-то, набей харю тому-то" - игра при всех своих больших размерах все-таки не настолько велика, чтобы это стало по-настоящему раздражать. 
 </p>
 <p>
 Очень порадовало оформление - как графическое, так и акустическое (намеренно не касаюсь вопросов копирайта, ибо по ряду причин ненавижу эту тему). С серьезными багами не встретился, хотя кое-какая мелочь присутствует. Из забавных: в ходе игры ГГ постоянно обращается к разнообразным владельцам замков с предложениями помощи. Обычно, если у них нет подходящего задания, они отвечают что-то типа, мол, спасибо, но для таких заданий нужен рыцарь покруче, чем ты. А ГГ им отвечает - ну, надеюсь, со временем Ваше мнение изменится. Ближе к концу владельцы начинают отвечать - мол, у меня в поместье теперь благодаря тебе все так замечательно, что единственное, в чем ты можешь мне помочь - это бухнуть со мной за компанию. Ответ же нашего ГГ не меняется и, честно говоря, звучит, как недоброе пророчество. 
@@ -311,7 +311,7 @@ P.S. А девушку можно было-бы и похоронить
 Вот в чем игре точно есть куда совершенствоваться, так это в вычитке текста. Опечаток масса, особенно же "радует" периодическое (и при этом достаточно частое) обращение неписей к главному герою "сер" - вероятно, это производное от старинного русского глагола "серить". Добро бы этим обращением грешили только крестьяне и прочая неграмотная шушера - нет, и куртуазнобалладной знати такое обращение не чуждо. (Кстати, об обращении: когда игра предложила мне представиться и пояснила, что обращение "сэр" будет добавляться автоматически, я, недолго думая, ввел ", русский неопределенный артикль из трех букв". Впоследствии каждое обращение ко мне со стороны персонажей приносило мне дополнительную маленькую радость, пусть и характеризующую меня не с самой лучшей стороны). 
 </p>
 <p>
-Подводя итог, скажу, что "Баллада" честно заработала шесть баллов из десяти, соответствующие статусу добротного произведения по моей шкале. И, пожалуй, это лучшая игра `MasterSet`а на текущий момент. 
+Подводя итог, скажу, что "Баллада" честно заработала шесть баллов из десяти, соответствующие статусу добротного произведения по моей шкале. И, пожалуй, это лучшая игра <strong>MasterSet</strong>`а на текущий момент. 
 </p>
 <h6 id="la-villa-esperance-avtor---masterset">La Villa Esperance, автор - MasterSet</h6><p>
 Попытки ГГ открыть глаза в начале игры напомнили мультик про Масяню и инстинкт валенок. Пожалуй, это впечатление от "Виллы" так и осталось самым положительным. 
@@ -394,7 +394,7 @@ P.S. А девушку можно было-бы и похоронить
 <p>
 Очень хочется поиграть в законченную версию. Увы, учитывая все обстоятельства, прогнозы вырисовываются малоутешительные: подозреваю, что игра будет дописана в далеком будущем и, скорее всего, на "Твибоксе". Но я все равно буду ждать...
 </p>
-<h6 id="obzory-nexa">Обзоры `Nex`а</h6><p>
+<h6 id="obzory-nexa">Обзоры <strong>Nex</strong>`а</h6><p>
 <a href="https://qsp.org/index.php?option=com_agora&task=topic&id=49&p=3&Itemid=57#p784" style="text-decoration:none;" class="emFOLD">ссылка</a>
 </p>
 <p>
@@ -437,7 +437,7 @@ P.S. А девушку можно было-бы и похоронить
 Впрочем, судить о прогрессе игр на QSP или в РИЛ, только по конкурсным играм QSP-Compo, было бы неверно - значительная часть игр выпускается на других конкурсах, и вообще вне конкурсов. 
 </p>
 <p>
-Поздравляю `Master Set`а с удачным дебютом, желаю нам побольше новых игр и новых авторов
+Поздравляю <span class="em_BLCK">Master Set</span>а с удачным дебютом, желаю нам побольше новых игр и новых авторов
 </p>
 <div style="display:flex;justify-content:space-between;"><div><a href="https://aleksversus.github.io/howdo_faq/informarch/ne_rabotaet_giperssylka_v_aeroqsp_0045.html" class="emHREFTT">&lt; Назад, к странице 44</a></div><div><a href="https://aleksversus.github.io/howdo_faq/informarch/zakladki_0030.html" class="emHREFTT">Вперёд, к странице 46 &gt;</a></div></div>
 <!-- body end -->
