--- a/informarch/razmer_okna_igry_0040.html
+++ b/informarch/razmer_okna_igry_0040.html
@@ -26,7 +26,7 @@
 Для этого вам потребуется использовать файл настроек "config.xml". За основу можно взять уже существующий файл, который находится в папке с установленным Quest Navigator`ом в подпапке "assets\standalone_content". Скопируйте файл "config.xml" в папку с вашей игрой, откройте любым текстовым редактором и отредактируйте атрибуты.
 </p>
 <p>
-Например, чтобы указать, что ваша игра должна изначально открываться в разрешении 1280х720, необходимо прописать соответствующие атрибуты `width` и `height`:
+Например, чтобы указать, что ваша игра должна изначально открываться в разрешении 1280х720, необходимо прописать соответствующие атрибуты <span class="em_BLCK">width</span> и <span class="em_BLCK">height</span>:
 </p>
 <div class="Monokai-Code">
 &lt;<span class="Monokai-TagName">game</span>&nbsp;<span class="Monokai-Markup">title</span>=<span class="Monokai-String">"Моя&nbsp;крутая&nbsp;Игра"</span>&nbsp;<span class="Monokai-Markup">resizeable</span>=<span class="Monokai-String">"true"</span>&nbsp;<span class="Monokai-Markup">standalone</span>=<span class="Monokai-String">"false"</span>&nbsp;<span class="Monokai-Markup">width</span>=<span class="Monokai-String">"1280"</span>&nbsp;<span class="Monokai-Markup">height</span>=<span class="Monokai-String">"720"</span>/&gt;<br/>
