--- a/informarch/standalone_aeroqsp_0027.html
+++ b/informarch/standalone_aeroqsp_0027.html
@@ -39,7 +39,7 @@
 aero-build-stand-alone.zip, 61 мегабайт.
 </p>
 <p>
-Автор: `NEX`
+Автор: <span class="em_BLCK">NEX</span>
 </p>
 <p>
 27.07.2011 14:41
