--- a/informarch/vypolnenie_js_iz_qsp-koda_0041.html
+++ b/informarch/vypolnenie_js_iz_qsp-koda_0041.html
@@ -23,13 +23,13 @@
 О:
 </p>
 <p>
-Для этого в QSP предусмотрен специальный оператор `EXEC`. Например, с помощью JavaScript поменяем цвет фона на бирюзовый:
+Для этого в QSP предусмотрен специальный оператор <span class="em_BLCK">EXEC</span>. Например, с помощью JavaScript поменяем цвет фона на бирюзовый:
 </p>
 <div class="Monokai-Code">
 <span class="Monokai-Operator">EXEC</span><span class="Monokai-Operator">(</span><span class="Monokai-String">'JS:document.body.style.backgroundColor="#000041";'</span><span class="Monokai-Operator">)</span><br/>
 </div>
 <p>
-В качестве аргумента данному оператору передаётся строка текста. Левая часть — до двоеточия — показывает на тип выполняемой инструкции JS — JavaScript. Правая часть — после двоеточия — непосредственно инструкция на JavaScript, которая присваивает элементу `document.body` соответствующий цвет фона.
+В качестве аргумента данному оператору передаётся строка текста. Левая часть — до двоеточия — показывает на тип выполняемой инструкции JS — JavaScript. Правая часть — после двоеточия — непосредственно инструкция на JavaScript, которая присваивает элементу <span class="em_BLCK">document.body</span> соответствующий цвет фона.
 </p>
 <p>
 Подобным образом можно выполнять и другие инструкции JavaScript прямо из кода QSP, однако следует помнить, что JavaScript выполняется только на уровне оформления и никак не влияет на код и состояния самой игры.
